--- a/Core/1.10Classpath-Scanning-and-Managed-Components.md
+++ b/Core/1.10Classpath-Scanning-and-Managed-Components.md
@@ -2,17 +2,17 @@
 
 本章中的大多数示例使用XML来指定在Spring容器中生成每个BeanDefinition的配置元数据。上一节（基于注解的容器配置）演示了如何通过源代码级注解提供大量的配置元数据。然而，即使在这些示例中，XML文件中也显式定义了“基本”bean定义，而注解只驱动依赖注入。
 
-本节介绍通过扫描类路径隐式检测候选组件的选项。候选组件是与筛选条件相匹配的类，并在容器中注册了相应的bean定义。这样就不需要使用XML来执行bean注册。相反，您可以使用注解（例如@Component）、AspectJ类型表达式或您自己的自定义筛选条件来选择哪些类具有向容器注册的bean定义。
+本节介绍通过扫描类路径隐式检测候选组件的选项。候选组件是与筛选条件相匹配的类，并在容器中注册了相应的bean定义。这样就不需要使用XML来执行bean注册。相反，你可以使用注解（例如@Component）、AspectJ类型表达式或你自己的自定义筛选条件来选择哪些类具有向容器注册的bean定义。
 
->从Spring3.0开始，Spring JavaConfig项目提供的许多特性都是核心Spring框架的一部分。这允许您使用Java定义bean，而不是使用传统的XML文件。查看@Configuration、@Bean、@Import和@DependsOn注解，了解如何使用这些新功能的示例。
+>从Spring3.0开始，Spring JavaConfig项目提供的许多特性都是核心Spring框架的一部分。这允许你使用Java定义bean，而不是使用传统的XML文件。查看@Configuration、@Bean、@Import和@DependsOn注解，了解如何使用这些新功能的示例。
 
 ## 1.10.1 @Component和进一步的构造型注解
 
 @Repository注解是一种类的一个标记，这些类实现了存储库的角色或原型（也称为数据访问对象或DAO）。
 
-Spring提供了更多的原型注解：@Component、@Service和@Controller。@Component是任何Spring管理的组件的通用原型。@Repository、@Service和@Controller是@Component针对更具体的用例（分别在持久性、服务和表示层中）的特殊注解。因此，您可以用@Component注解组件类，但是，通过用@Repository、@Service或@Controller注解它们，您的类将更适合通过工具处理或与aspects关联。
+Spring提供了更多的原型注解：@Component、@Service和@Controller。@Component是任何Spring管理的组件的通用原型。@Repository、@Service和@Controller是@Component针对更具体的用例（分别在持久性、服务和表示层中）的特殊注解。因此，你可以用@Component注解组件类，但是，通过用@Repository、@Service或@Controller注解它们，你的类将更适合通过工具处理或与aspects关联。
 
-例如，这些构造型注解是切入点的理想目标。@Repository、@Service和@Controller也可以在Spring框架的未来版本中附加语义。因此，如果您选择在服务层中使用@Component或@Service，@Service显然是更好的选择。同样，正如前面所述，@Repository已经被支持作为持久性层中自动异常转换的标记。
+例如，这些构造型注解是切入点的理想目标。@Repository、@Service和@Controller也可以在Spring框架的未来版本中附加语义。因此，如果你选择在服务层中使用@Component或@Service，@Service显然是更好的选择。同样，正如前面所述，@Repository已经被支持作为持久性层中自动异常转换的标记。
 
 
 ## 1.10.2 使用元注解和组合注解
@@ -33,7 +33,7 @@ public @Interface Service {
 >@Component会导致@Service和@Component一样被对待。
 
 你也可以合并使用元注解。比如：在Spring MVC中的@RestController就是由@Controller和@ResponseBody组成的。 
-此外，组合注解还可以选择从元注解中重新声明属性以允许自定义。当您只想公开元注解属性的一个子集时，这尤其有用。例如，Spring的@SessionScope注解将作用域名称硬编码为session，但仍允许自定义proxyMode。以下列表显示了sessionScope注解的定义：
+此外，组合注解还可以选择从元注解中重新声明属性以允许自定义。当你只想公开元注解属性的一个子集时，这尤其有用。例如，Spring的@SessionScope注解将作用域名称硬编码为session，但仍允许自定义proxyMode。以下列表显示了sessionScope注解的定义：
 
 ~~~
 @Target({ElementType.TYPE, ElementType.METHOD})
@@ -128,7 +128,7 @@ public class AppConfig  {
 
 >&lt;context:component-scan> 隐式的开启了&lt;context:annotation-config>的功能。所以当使用&lt;context:component-scan>的时候就不需要用&lt;context:annotation-config>。
 
->扫描classpath包需要在classpath中存在相应的目录条目。当您使用Ant构建JAR时，请确保您没有激活JAR任务的仅限文件的开关。此外，在某些环境中，根据安全策略，类路径目录可能不会公开-例如，JDK 1.7.0_45及更高版本上的独立应用程序（这需要在清单中设置“可信库”）请参见https://stackoverflow.com/questions/19394570/java-jre-7u45-breaks-classloader-getresources）。
+>扫描classpath包需要在classpath中存在相应的目录条目。当你使用Ant构建JAR时，请确保你没有激活JAR任务的仅限文件的开关。此外，在某些环境中，根据安全策略，类路径目录可能不会公开-例如，JDK 1.7.0_45及更高版本上的独立应用程序（这需要在清单中设置“可信库”）请参见https://stackoverflow.com/questions/19394570/java-jre-7u45-breaks-classloader-getresources）。
 
 >在JDK9的模块路径（Jigsaw）上，Spring的类路径扫描通常按预期工作。但是，请确保组件类暴露在module-info描述符中。如果希望Spring调用类的非公共成员，请确保它们是“打开的”（即，它们使用opens声明而不是module-info描述符中的exports声明）。   
 
@@ -179,7 +179,7 @@ public class AppConfig {
 
 ## 1.10.5 在组件内部定义Bean元数据
 
-Spring组件还可以为容器提供bean定义元数据。您可以使用用于在@Configuration annotated类中定义bean元数据的相同@Bean注解来实现这一点。以下示例显示了如何执行此操作：
+Spring组件还可以为容器提供bean定义元数据。你可以使用用于在@Configuration annotated类中定义bean元数据的相同@Bean注解来实现这一点。以下示例显示了如何执行此操作：
 
 ~~~
 @Component
@@ -199,7 +199,7 @@ public class FactoryMethodComponent {
 
 前面的类是一个Spring组件，它的doWork（）方法中包含特定于应用程序的代码。但是，它还提供一个bean定义，该bean定义具有引用方法publicInstance（）的工厂方法。@Bean注解标识工厂方法和其他bean定义属性，例如通过@qualifier注解的限定符值。可以指定的其他方法级批注包括@Scope、@Lazy和自定义限定符批注。
 
-除了其用于组件初始化的角色之外，您还可以将@Lazy注解放在标有@Autowired或@Inject的注入点上。在这种情况下，它会导致注入延迟解析代理。
+除了其用于组件初始化的角色之外，你还可以将@Lazy注解放在标有@Autowired或@Inject的注入点上。在这种情况下，它会导致注入延迟解析代理。
 
 如前所述，支持自动装载的字段和方法，并额外支持@Bean方法的自动装载。以下示例显示了如何执行此操作：
 
@@ -243,7 +243,7 @@ public class FactoryMethodComponent {
 
 从SpringFramework4.3开始，还可以声明InjectionPoint类型的工厂方法参数（或其更具体的子类：DependencyDescriptor）以访问触发当前bean创建的请求注入点。
 
-注意，这只适用于bean实例的实际创建，而不适用于现有实例的注入。因此，这个特性对于原型范围的bean最有意义。对于其他作用域，factory方法只会看到触发在给定作用域中创建新bean实例的注入点（例如，触发惰性单例bean创建的依赖项）。在这种情况下，您可以使用提供的注入点元数据和语义关注。下面的示例演示如何使用InjectionPoint：
+注意，这只适用于bean实例的实际创建，而不适用于现有实例的注入。因此，这个特性对于原型范围的bean最有意义。对于其他作用域，factory方法只会看到触发在给定作用域中创建新bean实例的注入点（例如，触发惰性单例bean创建的依赖项）。在这种情况下，你可以使用提供的注入点元数据和语义关注。下面的示例演示如何使用InjectionPoint：
 
 ~~~
 @Component
@@ -260,11 +260,11 @@ public class FactoryMethodComponent {
 
 即使通过引用对@Bean方法的编程调用来引用其他bean，这也不是普通的Java语义调用，而是通过容器来提供通常的生命周期管理和Spring bean的代理，相反，在普通的@Component类中调用“bean”方法中具有标准Java语义的方法或字段，没有特殊的CGLIB处理或其他约束应用。
 
->您可以将@Bean方法声明为静态方法，允许在不将其包含的配置类创建为实例的情况下调用它们。在定义post-processor bean（例如，BeanFactoryPostProcessor或BeanPostProcessor类型）时，这是特别有意义的，因为这样的bean在容器生命周期的早期就被初始化，应该避免在此时触发配置的其他部分。
+>你可以将@Bean方法声明为静态方法，允许在不将其包含的配置类创建为实例的情况下调用它们。在定义post-processor bean（例如，BeanFactoryPostProcessor或BeanPostProcessor类型）时，这是特别有意义的，因为这样的bean在容器生命周期的早期就被初始化，应该避免在此时触发配置的其他部分。
 
 >由于技术限制，对static@Bean方法的调用永远不会被容器截获，即使是在@Configuration类（如本节前面所述）中也是如此：cglib子类只能重写非静态方法。因此，直接调用另一个@Bean方法具有标准Java语义，导致从工厂方法本身直接返回一个独立的实例。
 
->“@Bean”方法的Java语言可见性不会对Spring容器中的bean定义产生直接影响。您可以自由地声明您认为适合非@Configuration类以及任何静态方法的工厂方法。但是，@Configuration类中的常规@Bean方法必须是可重写的，也就是说，它们不能声明为私有或最终的。
+>“@Bean”方法的Java语言可见性不会对Spring容器中的bean定义产生直接影响。你可以自由地声明你认为适合非@Configuration类以及任何静态方法的工厂方法。但是，@Configuration类中的常规@Bean方法必须是可重写的，也就是说，它们不能声明为私有或最终的。
 
 >“@Bean”方法也在给定组件或配置类的基类上发现，以及在由组件或配置类实现的接口中声明的Java 8默认方法上。这允许在组成复杂的配置安排方面有很大的灵活性，即使是多个继承也可以通过Java 8默认方法（如Spring 4.2）来实现。
 
@@ -291,7 +291,7 @@ public class MovieFinderImpl implements MovieFinder {
 }
 ~~~
 
->如果您不想依赖默认的bean命名策略，可以提供一个自定义的bean命名策略。首先，实现BeanNameGenerator接口，并确保包含一个默认的无参数构造函数。然后，在配置扫描器时提供完全限定的类名，如下面的示例注解和bean定义所示：
+>如果你不想依赖默认的bean命名策略，可以提供一个自定义的bean命名策略。首先，实现BeanNameGenerator接口，并确保包含一个默认的无参数构造函数。然后，在配置扫描器时提供完全限定的类名，如下面的示例注解和bean定义所示：
 
 ~~~
 @Configuration
@@ -312,7 +312,7 @@ public class AppConfig {
 
 ## 1.10.7 为自动检测的组件提供作用域
 
-与一般的Spring管理组件一样，自动检测组件的默认和最常见的作用域是singleton。但是，有时您需要一个可以由@Scope注解指定的不同范围。可以在注解中提供作用域的名称，如下示例所示：
+与一般的Spring管理组件一样，自动检测组件的默认和最常见的作用域是singleton。但是，有时你需要一个可以由@Scope注解指定的不同范围。可以在注解中提供作用域的名称，如下示例所示：
 
 ~~~
 @Scope("prototype")
@@ -324,9 +324,9 @@ public class MovieFinderImpl implements MovieFinder {
 
 >@Scope注解只在具体的bean类（对于带注解的组件）或工厂方法（对于@Bean方法）上进行内省。与XML bean定义不同，没有bean定义继承的概念，并且类级别的继承层次结构与元数据无关。
 
-有关特定于Web的范围（如Spring上下文中的“请求”或“会话”）的详细信息，请参阅请求、会话、应用程序和WebSocket范围。与这些作用域的预构建注解一样，您也可以使用Spring的元注解方法编写自己的作用域注解：例如，使用@Scope（“prototype”）注解的自定义注解元，也可能声明自定义作用域代理模式。
+有关特定于Web的范围（如Spring上下文中的“请求”或“会话”）的详细信息，请参阅请求、会话、应用程序和WebSocket范围。与这些作用域的预构建注解一样，你也可以使用Spring的元注解方法编写自己的作用域注解：例如，使用@Scope（“prototype”）注解的自定义注解元，也可能声明自定义作用域代理模式。
 
->要为范围解析提供自定义策略，而不是依赖基于注解的方法，可以实现ScopeMetadataResolver接口。请确保包含默认的无参数构造函数。然后，您可以在配置扫描器时提供完全限定的类名，正如下面的注解和bean定义示例所示：
+>要为范围解析提供自定义策略，而不是依赖基于注解的方法，可以实现ScopeMetadataResolver接口。请确保包含默认的无参数构造函数。然后，你可以在配置扫描器时提供完全限定的类名，正如下面的注解和bean定义示例所示：
 
 ~~~
 @Configuration
@@ -392,7 +392,7 @@ public class CachingMovieCatalog implements MovieCatalog {
 
 虽然类路径扫描速度非常快，但是可以通过在编译时创建一个静态候选列表来提高大型应用程序的启动性能。在此模式下，作为组件扫描目标的所有模块都必须使用此机制。
 
->您现有的@ComponentScan或&lt;context:component-scan>指令必须保持原样，以请求上下文扫描某些包中的候选项。当ApplicationContext检测到这样的索引时，它会自动使用它，而不是扫描类路径。
+>你现有的@ComponentScan或&lt;context:component-scan>指令必须保持原样，以请求上下文扫描某些包中的候选项。当ApplicationContext检测到这样的索引时，它会自动使用它，而不是扫描类路径。
 
 要生成索引，请向每个模块添加一个附加依赖项，该模块包含作为组件扫描指令目标的组件。下面的示例说明如何使用Maven：
 
@@ -424,7 +424,7 @@ dependencies {
 
 这个过程生成一个包含在JAR文件中的META-INF/spring.components文件。
 
->在您的IDE中使用此模式时，spring-context-indexer必须注册为注解处理器，以确保在更新候选组件时索引是最新的。
+>在你的IDE中使用此模式时，spring-context-indexer必须注册为注解处理器，以确保在更新候选组件时索引是最新的。
 
 >当在类路径上找到META-INF/Spring.components时，索引将自动启用。如果某个索引部分可用于某些库（或用例），但无法为整个应用程序生成，则可以通过将spring.index.ignore设置为true（作为系统属性或类路径根目录下的spring.properties文件）来回滚到常规类路径安排（就像根本没有索引一样）。
 
