--- a/Core/1.11Using-JSR-330-Standard-Annotations.md
+++ b/Core/1.11Using-JSR-330-Standard-Annotations.md
@@ -2,7 +2,7 @@
 
 从Spring3.0之后，Spring提供了JSR-330标志注解的支持。这些注解和Spring注解一样被进行扫描，如果想使用它们，需要包含下面的jar包：
 
->如果您使用maven，那么javax.inject工件可以在标准maven存储库中使用（https://repo1.maven.org/maven2/javax/inject/javax.inject/1/）。可以将以下依赖项添加到文件pom.xml中：
+>如果你使用maven，那么javax.inject工件可以在标准maven存储库中使用（https://repo1.maven.org/maven2/javax/inject/javax.inject/1/）。可以将以下依赖项添加到文件pom.xml中：
 
 ~~~
 <dependency>
@@ -37,7 +37,7 @@ public class SimpleMovieLister {
 
 ~~~
 
-与@Autowired一样，您可以在字段级、方法级和构造函数参数级使用@Inject。此外，您可以将注入点声明为Provider，允许通过Provider.get() 调用按需访问较短作用域的bean或延迟访问其他bean。以下示例提供了前面示例的变体：
+与@Autowired一样，你可以在字段级、方法级和构造函数参数级使用@Inject。此外，你可以将注入点声明为Provider，允许通过Provider.get() 调用按需访问较短作用域的bean或延迟访问其他bean。以下示例提供了前面示例的变体：
 
 ~~~
 import javax.inject.Inject;
@@ -153,11 +153,11 @@ public class AppConfig  {
 }
 ~~~
 
->与@Component不同,JSR-330的@Named和JSR-250的@ManagedBean是不可组合的。您应该使用Spring的构造型模型来构建自定义组件注解。
+>与@Component不同,JSR-330的@Named和JSR-250的@ManagedBean是不可组合的。你应该使用Spring的构造型模型来构建自定义组件注解。
 
 ## 1.11.3 JSR-330 标准注解的限制
 
-当使用标准注解时，您应该知道一些重要功能不可用，如下表所示：
+当使用标准注解时，你应该知道一些重要功能不可用，如下表所示：
 
 Spring|javax.inject.*|javax.inject限制/描述
 -|-|-|
