--- a/Core/1.13Environment-Abstraction.md
+++ b/Core/1.13Environment-Abstraction.md
@@ -38,11 +38,11 @@ public DataSource dataSource() throws Exception {
 
 问题是如何根据当前环境在使用这两种变体之间进行切换。随着时间的推移，Spring用户设计了许多实现这一点的方法，通常依赖于系统环境变量和包含$placeholder标记的XML&lt;import/>语句的组合，这些标记根据环境变量的值解析为正确的配置文件路径。bean定义概要文件是一个核心容器特性，它为这个问题提供了解决方案。
 
-如果我们概括前面环境特定bean定义示例中所示的用例，那么最终需要在特定上下文中注册特定bean定义，而不是在其他上下文中注册特定bean定义。可以说，您希望在情况A中注册bean定义的某个概要文件，在情况B中注册另一个概要文件。我们首先更新配置以反映这种需求。
+如果我们概括前面环境特定bean定义示例中所示的用例，那么最终需要在特定上下文中注册特定bean定义，而不是在其他上下文中注册特定bean定义。可以说，你希望在情况A中注册bean定义的某个概要文件，在情况B中注册另一个概要文件。我们首先更新配置以反映这种需求。
 
 **使用@Profile**
 
-@Profile注解允许您指示一个组件在一个或多个指定的配置文件处于活动状态时可以注册。使用前面的示例，我们可以如下重写数据源配置：
+@Profile注解允许你指示一个组件在一个或多个指定的配置文件处于活动状态时可以注册。使用前面的示例，我们可以如下重写数据源配置：
 
 ~~~
 @Configuration
@@ -85,7 +85,7 @@ public class JndiDataConfig {
 
 >你不能不加括号来混合使用 & 和 | ，如production & us-east | eu-central 是错误的，应该production & (us-east | eu-central)。
 
-可以将@Profile用作元注解，以创建自定义组合注解。以下示例定义了一个自定义的@Production注解，您可以将其用作@Profile（“production”）的插入替换：
+可以将@Profile用作元注解，以创建自定义组合注解。以下示例定义了一个自定义的@Production注解，你可以将其用作@Profile（“production”）的插入替换：
 
 ~~~
 @Target(ElementType.TYPE)
@@ -217,7 +217,7 @@ ctx.refresh();
 
 此外，还可以通过spring.profiles.active属性声明性地激活概要文件，该属性可以通过系统环境变量、jvm系统属性、web.xml中的servlet上下文参数指定，甚至可以作为JNDI中的条目指定（请参见PropertySource抽象）。在集成测试中，可以使用Spring测试模块中的@Active profiles注解声明活动配置文件（请参见环境配置文件的上下文配置）。
 
-请注意，配置文件不是“要么或”命题。您可以一次激活多个配置文件。通过编程，您可以为setActiveProfiles（）方法提供多个配置文件名，该方法接受String…​ varargs。以下示例激活多个配置文件：
+请注意，配置文件不是“要么或”命题。你可以一次激活多个配置文件。通过编程，你可以为setActiveProfiles（）方法提供多个配置文件名，该方法接受String…​ varargs。以下示例激活多个配置文件：
 
 ~~~
 ctx.getEnvironment().setActiveProfiles("profile1", "profile2");
@@ -250,7 +250,7 @@ public class DefaultDataConfig {
 
 如果没有Profile被激活，那么dataSource就会被创建，你可以看成创建bean的默认方式。如果其他的Profile被激活了，那么默认的Profile就不会被使用。
 
-您可以在环境中使用SetDefaultProfiles（）更改默认profile的名称，或者声明性地使用spring.profiles.default属性更改默认概要文件的名称。
+你可以在环境中使用SetDefaultProfiles（）更改默认profile的名称，或者声明性地使用spring.profiles.default属性更改默认概要文件的名称。
 
 ## 1.13.2 PropertySource简介
 
@@ -278,7 +278,7 @@ System.out.println("Does my environment contain the 'my-property' property? " + 
 >* JVM系统属性（-d命令行参数）
 >* JVM系统环境（操作系统环境变量）
 
-最重要的是，整个机制是可配置的。也许您有一个自定义的属性源，希望将其集成到这个搜索中。为此，请实现并实例化自己的PropertySource，并将其添加到当前环境的PropertySource集合中。以下示例显示了如何执行此操作：
+最重要的是，整个机制是可配置的。也许你有一个自定义的属性源，希望将其集成到这个搜索中。为此，请实现并实例化自己的PropertySource，并将其添加到当前环境的PropertySource集合中。以下示例显示了如何执行此操作：
 
 ~~~
 ConfigurableApplicationContext ctx = new GenericApplicationContext();
@@ -336,7 +336,7 @@ public class AppConfig {
 
 ## 1.13.4 语句中的占位符解析
 
-历史上，元素中占位符的值只能根据JVM系统属性或环境变量来解析。情况不再是这样了。因为环境抽象集成在整个容器中，所以很容易通过它来路由占位符的解析。这意味着您可以以任何您喜欢的方式配置解析过程。您可以更改搜索系统属性和环境变量的优先级，或者完全删除它们。您还可以根据需要将自己的属性源添加到组合中。
+历史上，元素中占位符的值只能根据JVM系统属性或环境变量来解析。情况不再是这样了。因为环境抽象集成在整个容器中，所以很容易通过它来路由占位符的解析。这意味着你可以以任何你喜欢的方式配置解析过程。你可以更改搜索系统属性和环境变量的优先级，或者完全删除它们。你还可以根据需要将自己的属性源添加到组合中。
 
 具体来说，只要customer property在Environment中可用，无论customer property在何处定义，以下陈述都有效：
 
