--- a/Core/1.15Additional-Capabilities-of-the-ApplicationContext.md
+++ b/Core/1.15Additional-Capabilities-of-the-ApplicationContext.md
@@ -130,7 +130,7 @@ public static void main(final String[] args) {
 Ebagum lad, the 'userDao' argument is required, I say, required.
 ~~~
 
-您还可以使用MessageSourceAware接口获取对已定义的任何MessageSource的引用。在ApplicationContext中定义的、实现MessageSourceAware接口的任何bean在创建和配置bean时都会与应用程序上下文的MessageSource一起注入。
+你还可以使用MessageSourceAware接口获取对已定义的任何MessageSource的引用。在ApplicationContext中定义的、实现MessageSourceAware接口的任何bean在创建和配置bean时都会与应用程序上下文的MessageSource一起注入。
 
 >作为ResourceBundleMessageSource的替代方案，Spring提供了一个ReloadableResourceBundleMessageSource类。此变体支持相同的包文件格式，但比基于JDK的标准ResourceBundleMessageSource实现更灵活。特别是，它允许从任何Spring资源位置（不仅是从类路径）读取文件，并支持捆绑属性文件的热重新加载（同时有效地在两者之间缓存它们）。有关详细信息，请参阅ReloadableResourceBundleMessageSource javadoc。
 
@@ -193,7 +193,7 @@ public class EmailService implements ApplicationEventPublisherAware {
 }
 ~~~
 
-在配置时，Spring容器检测到EmailService实现了ApplicationEventPublisherAware，并自动调用setApplicationEventPublisher（）。实际上，传入的参数是Spring容器本身。您正在通过其applicationEventPublisher接口与应用程序上下文进行交互。
+在配置时，Spring容器检测到EmailService实现了ApplicationEventPublisherAware，并自动调用setApplicationEventPublisher（）。实际上，传入的参数是Spring容器本身。你正在通过其applicationEventPublisher接口与应用程序上下文进行交互。
 
 要接收定制的applicationEvent，可以创建一个实现applicationListener的类，并将其注册为SpringBean。下面的示例显示了这样的类：
 
@@ -212,7 +212,7 @@ public class BlackListNotifier implements ApplicationListener<BlackListEvent> {
 }
 ~~~
 
-注意，applicationListener通常是用自定义事件的类型（前面的示例中是blacklistevent）参数化的。这意味着onApplicationEvent（）方法可以保持类型安全，避免任何向下强制转换的需要。您可以注册任意多个事件侦听器，但请注意，默认情况下，事件侦听器同步接收事件。这意味着publishEvent（）方法将一直阻塞，直到所有侦听器完成对事件的处理。这种同步和单线程方法的一个优点是，当侦听器接收到事件时，如果事务上下文可用，它将在发布服务器的事务上下文中操作。如果需要事件发布的另一个策略，请参阅JavaDoc for Spring的ApplicationEventMulticaster接口。
+注意，applicationListener通常是用自定义事件的类型（前面的示例中是blacklistevent）参数化的。这意味着onApplicationEvent（）方法可以保持类型安全，避免任何向下强制转换的需要。你可以注册任意多个事件侦听器，但请注意，默认情况下，事件侦听器同步接收事件。这意味着publishEvent（）方法将一直阻塞，直到所有侦听器完成对事件的处理。这种同步和单线程方法的一个优点是，当侦听器接收到事件时，如果事务上下文可用，它将在发布服务器的事务上下文中操作。如果需要事件发布的另一个策略，请参阅JavaDoc for Spring的ApplicationEventMulticaster接口。
 
 下面的示例显示了用于注册和配置上述每个类的bean定义：
 
@@ -238,7 +238,7 @@ public class BlackListNotifier implements ApplicationListener<BlackListEvent> {
 
 **基于注解的Event Listeners**
 
-从Spring4.2开始，您可以使用EventListener注解在托管bean的任何公共方法上注册事件侦听器。BlackListNotifier程序可以改写如下：
+从Spring4.2开始，你可以使用EventListener注解在托管bean的任何公共方法上注册事件侦听器。BlackListNotifier程序可以改写如下：
 
 ~~~
 public class BlackListNotifier {
@@ -258,7 +258,7 @@ public class BlackListNotifier {
 
 方法签名再次声明它要侦听的事件类型，但这次使用灵活的名称，而不实现特定的侦听器接口。只要实际事件类型在其实现层次结构中解析泛型参数，就可以通过泛型缩小事件类型。
 
-如果您的方法应该监听多个事件，或者您想要定义它而不使用任何参数，那么也可以在注解本身上指定事件类型。以下示例显示了如何执行此操作：
+如果你的方法应该监听多个事件，或者你想要定义它而不使用任何参数，那么也可以在注解本身上指定事件类型。以下示例显示了如何执行此操作：
 
 ~~~
 @EventListener({ContextStartedEvent.class, ContextRefreshedEvent.class})
@@ -278,7 +278,7 @@ public void processBlackListEvent(BlackListEvent blEvent) {
 }
 ~~~
 
-每个spEL表达式都根据专用上下文进行计算。下表列出了上下文可用的项，以便您可以将它们用于条件事件处理：
+每个spEL表达式都根据专用上下文进行计算。下表列出了上下文可用的项，以便你可以将它们用于条件事件处理：
 
 name|Location|描述|例子
 -|-|-|-
@@ -286,7 +286,7 @@ Event|root object|真实的ApplicationEvent|#root.event
 Arguments array|root object|调用目标的参数|#root.args[0]
 Argument name|evaluation context|任何方法参数的名称。如果由于某种原因，名称不可用（例如，因为没有调试信息），参数名称也可以在 #a<#arg>下使用，其中#arg表示参数索引（从0开始）。|#blEvent or #a0 (也可以使用 #p0 or #p<#arg>)
 
-请注意，root.event允许您访问基础事件，即使您的方法签名实际上引用了已发布的任意对象。
+请注意，root.event允许你访问基础事件，即使你的方法签名实际上引用了已发布的任意对象。
 
 如果在处理另一个事件时需要发布事件，可以更改方法签名以返回应发布的事件，如下例所示：
 
@@ -333,7 +333,7 @@ public void processBlackListEvent(BlackListEvent event) {
 
 **一般事件**
 
-您还可以使用泛型进一步定义事件的结构。考虑使用EntityCreatedEvent<T>，其中t是创建的实际实体的类型。例如，您可以创建以下侦听器定义以仅接收某个人的EntityCreatedEvent：
+你还可以使用泛型进一步定义事件的结构。考虑使用EntityCreatedEvent<T>，其中t是创建的实际实体的类型。例如，你可以创建以下侦听器定义以仅接收某个人的EntityCreatedEvent：
 
 ~~~
 @EventListener
@@ -344,7 +344,7 @@ public void onPersonCreated(EntityCreatedEvent<Person> event) {
 
 由于类型擦除，只有在激发的事件解析事件侦听器筛选的通用参数（比如类PersonCreatedEvent扩展EntityCreatedEvent<Person>…）时，此操作才有效。
 
-在某些情况下，如果所有事件都遵循相同的结构（如前一个示例中的事件一样），则这可能会变得相当乏味。在这种情况下，您可以实现ResolvableTypeProvider程序，以指导框架超越运行时环境提供的内容。以下事件显示如何执行此操作：
+在某些情况下，如果所有事件都遵循相同的结构（如前一个示例中的事件一样），则这可能会变得相当乏味。在这种情况下，你可以实现ResolvableTypeProvider程序，以指导框架超越运行时环境提供的内容。以下事件显示如何执行此操作：
 
 ~~~
 public class EntityCreatedEvent<T> extends ApplicationEvent implements ResolvableTypeProvider {
@@ -364,17 +364,17 @@ public class EntityCreatedEvent<T> extends ApplicationEvent implements Resolvabl
 
 ## 1.15.3 方便获取低级资源
 
-为了优化应用程序上下文的使用和理解，您应该熟悉Spring的资源抽象，如参考资料中所述。
+为了优化应用程序上下文的使用和理解，你应该熟悉Spring的资源抽象，如参考资料中所述。
 
 应用程序上下文是可用于加载资源对象的ResourceLoader。资源本质上是JDK java.net.URL类的功能更丰富的版本。实际上，资源的实现在适当的情况下包装了java.net.url的实例。Resource可以以透明的方式从几乎任何位置获取低级资源，包括从类路径、文件系统位置、使用标准URL可描述的任何位置以及其他一些变体。如果资源位置字符串是没有任何特殊前缀的简单路径，那么这些资源的来源是特定的，并且适合于实际的应用程序上下文类型。
 
-可以将部署到应用程序上下文中的bean配置为实现特殊的回调接口ResourceLoaderAware，以便在初始化时自动回调，并将应用程序上下文本身作为ResourceLoader传入。您还可以公开资源类型的属性，以用于访问静态资源。它们像其他任何性质一样被注入其中。您可以将这些资源属性指定为简单的字符串路径，并在部署bean时依赖于从这些文本字符串到实际资源对象的自动转换。
+可以将部署到应用程序上下文中的bean配置为实现特殊的回调接口ResourceLoaderAware，以便在初始化时自动回调，并将应用程序上下文本身作为ResourceLoader传入。你还可以公开资源类型的属性，以用于访问静态资源。它们像其他任何性质一样被注入其中。你可以将这些资源属性指定为简单的字符串路径，并在部署bean时依赖于从这些文本字符串到实际资源对象的自动转换。
 
 提供给ApplicationContext构造函数的一个或多个位置路径实际上是资源字符串，并且以简单的形式根据特定的上下文实现进行适当的处理。例如，ClassPathXMLApplicationContext将简单位置路径视为类路径位置。也可以使用带有特殊前缀的位置路径（资源字符串）强制从类路径或URL加载定义，而不管实际的上下文类型如何。
 
 ## 1.15.4 方便的Web应用程序应用上下文实例化
 
-可以通过使用ContextLoader等声明性地创建ApplicationContext实例。当然，您也可以使用ApplicationContext实现之一以编程方式创建applicationContext实例。
+可以通过使用ContextLoader等声明性地创建ApplicationContext实例。当然，你也可以使用ApplicationContext实现之一以编程方式创建applicationContext实例。
 
 可以使用ContextLoaderListener注册ApplicationContext，如下示例所示：
 
