--- a/Core/1.9Annotation-based-Container-Configuration.md
+++ b/Core/1.9Annotation-based-Container-Configuration.md
@@ -13,7 +13,7 @@
 
 >注解注入在XML注入之前执行。因此，当两个同时使用时，XML配置会覆盖注解注入的属性。
     
-同样的，您可以将它们注册为单个bean定义，但也可以通过在基于XML的Spring配置中包含以下标记来隐式注册它们（注意上下文命名空间的包含）：
+同样的，你可以将它们注册为单个bean定义，但也可以通过在基于XML的Spring配置中包含以下标记来隐式注册它们（注意上下文命名空间的包含）：
 
 
 ```
@@ -54,7 +54,7 @@ public class SimpleMovieLister {
 }
 ```
 
-此注解指示受影响的bean属性必须在配置时通过bean定义中的显式属性值或通过自动装载填充。如果未填充受影响的bean属性，则容器将引发异常。这就允许了早期和显式的失败，避免了后面的NullPointerException实例等。我们仍然建议您将断言放入bean类本身（例如，放到init方法中）。这样做会强制那些必需的引用和值，即使在容器外部使用类也是如此。
+此注解指示受影响的bean属性必须在配置时通过bean定义中的显式属性值或通过自动装载填充。如果未填充受影响的bean属性，则容器将引发异常。这就允许了早期和显式的失败，避免了后面的NullPointerException实例等。我们仍然建议你将断言放入bean类本身（例如，放到init方法中）。这样做会强制那些必需的引用和值，即使在容器外部使用类也是如此。
 
 >从Spring Framework 5.1开始，@Required注解正式被弃用，取而代之的是将构造函数注入用于所需的设置（或使用InitializingBean.afterPropertiesSet（）的自定义实现以及bean属性setter方法）。
     
@@ -144,7 +144,7 @@ public class MovieRecommender {
 
 >确保目标组件（例如movieCatalog或customerPreferenceDAO）始终通过类型来声明，这样才能用在@Autowired注入点。否则，由于在运行时找不到类型匹配，注入可能会失败。
     
->对于通过类路径扫描找到的XML定义的bean或组件类，容器通常预先知道具体的类型。但是，对于@Bean工厂方法，您需要确保声明的返回类型具有足够的表现力。对于实现多个接口的组件或可能由其实现类型引用的组件，考虑在工厂方法上声明最特定的返回类型（至少与引用bean的注入点所要求的特定类型相同）。
+>对于通过类路径扫描找到的XML定义的bean或组件类，容器通常预先知道具体的类型。但是，对于@Bean工厂方法，你需要确保声明的返回类型具有足够的表现力。对于实现多个接口的组件或可能由其实现类型引用的组件，考虑在工厂方法上声明最特定的返回类型（至少与引用bean的注入点所要求的特定类型相同）。
     
 还可以通过将注解添加到需要该类型数组的字段或方法，那么可以从ApplicationContext中获取到该特定类型的所有bean，如下例所示：
 
@@ -176,11 +176,11 @@ public class MovieRecommender {
 }
 ```
 
->您的目标bean可以实现org.springframework.core.Ordered接口，或者如果您希望数组或列表中的项按特定顺序排序，可以使用@Order或标准的@Priority注解。
+>你的目标bean可以实现org.springframework.core.Ordered接口，或者如果你希望数组或列表中的项按特定顺序排序，可以使用@Order或标准的@Priority注解。
 
 >否则，它们的顺序遵循容器中相应目标bean定义的注册顺序。
 
->您可以在目标类级别和@Bean方法上声明@Order注解，可能是通过单个bean定义（在使用同一bean类的多个定义的情况下）声明的。@Order可能会影响注入点的优先级，但请注意，它们不会影响单例启动顺序，这是一个由依赖关系和@DependsOn声明确定的正交问题。
+>你可以在目标类级别和@Bean方法上声明@Order注解，可能是通过单个bean定义（在使用同一bean类的多个定义的情况下）声明的。@Order可能会影响注入点的优先级，但请注意，它们不会影响单例启动顺序，这是一个由依赖关系和@DependsOn声明确定的正交问题。
 
 >注意，标准javax.annotation.Priority注解在@Bean级别不可用，因为它不能在方法上声明。它的语义可以通过@Order values和@Primary在每种类型的单个bean上进行建模。
     
@@ -203,7 +203,7 @@ public class MovieRecommender {
 
 如果注入点没有可以匹配的目标，那么自动注入会失败。如果是array, collection 或者 map，至少要有一个元素能匹配。
 
-默认行为是将带注解的方法和字段视为指示所需依赖项。您可以如以下示例中所示更改此行为，使框架能够跳过不可满足的注入点，方法是将其标记为非必需：
+默认行为是将带注解的方法和字段视为指示所需依赖项。你可以如以下示例中所示更改此行为，使框架能够跳过不可满足的注入点，方法是将其标记为非必需：
 
 
 ```
@@ -228,7 +228,7 @@ public class SimpleMovieLister {
     
 >建议使用@Autowired的'required'属性而不是使用setter方法上的@Required注解。“required”属性表示自动装载不需要该属性。如果无法自动装载，则忽略该属性。另一方面，@Required更强大，因为它强制通过容器支持的任何方式来设置属性。如果未定义任何值，则会引发相应的异常。
     
-或者，您可以通过Java 8的java.util.Optional表示特定依赖项的非必需性质，如下示例显示：
+或者，你可以通过Java 8的java.util.Optional表示特定依赖项的非必需性质，如下示例显示：
 
 
 ```
@@ -254,7 +254,7 @@ public class SimpleMovieLister {
 }
 ```
 
-您还可以使用@Autowired处理已知可解析依赖项的接口：BeanFactory、ApplicationContext、Environment、ResourceLoader、ApplicationEventPublisher和MessageSource。这些接口及其扩展接口（如ConfigurableApplicationContext或ResourcePatternResolver）将自动解析，无需特殊设置。以下示例自动装载ApplicationContext对象：
+你还可以使用@Autowired处理已知可解析依赖项的接口：BeanFactory、ApplicationContext、Environment、ResourceLoader、ApplicationEventPublisher和MessageSource。这些接口及其扩展接口（如ConfigurableApplicationContext或ResourcePatternResolver）将自动解析，无需特殊设置。以下示例自动装载ApplicationContext对象：
 
 ```
 public class MovieRecommender {
@@ -334,7 +334,7 @@ public class MovieRecommender {
 
 ## 1.9.4 带有Qualifier的基于微调注解的自动装载
 
-当可以确定一个主要候选对象时，@Primary是一种在多个实例中按类型使用自动装载的有效方法。当您需要对选择过程进行更多控制时，可以使用Spring的@Qualifier注解。您可以将限定符值与特定参数相关联，缩小类型匹配集的范围，以便为每个参数选择特定的bean。在最简单的情况下，这可以是一个简单的描述性值，如下面的示例所示：
+当可以确定一个主要候选对象时，@Primary是一种在多个实例中按类型使用自动装载的有效方法。当你需要对选择过程进行更多控制时，可以使用Spring的@Qualifier注解。你可以将限定符值与特定参数相关联，缩小类型匹配集的范围，以便为每个参数选择特定的bean。在最简单的情况下，这可以是一个简单的描述性值，如下面的示例所示：
 
 
 ```
@@ -348,7 +348,7 @@ public class MovieRecommender {
 }
 ```
 
-您还可以在单个构造函数参数或方法参数上指定@Qualifier注解，如下例所示：
+你还可以在单个构造函数参数或方法参数上指定@Qualifier注解，如下例所示：
 
 ```
 public class MovieRecommender {
@@ -401,21 +401,21 @@ public class MovieRecommender {
 ```
 对于回退匹配，bean名称被视为默认限定符值。因此，可以使用id为main而不是嵌套限定符元素来定义bean，从而得到相同的匹配结果。
 
-然而，尽管您可以使用此约定按名称引用特定的bean，@Autowired是关于带有可选语义限定符的类型驱动注入的根本。这意味着，即使使用bean名称回退，限定符值在类型匹配集内也始终具有收缩语义。它们不会在语义上表示对唯一bean id的引用。好的限定符值是main、EMEA或persistent，表示独立于bean id的特定组件的特征，在匿名bean定义（如前面示例中的定义）的情况下，可以自动生成这些特征。
+然而，尽管你可以使用此约定按名称引用特定的bean，@Autowired是关于带有可选语义限定符的类型驱动注入的根本。这意味着，即使使用bean名称回退，限定符值在类型匹配集内也始终具有收缩语义。它们不会在语义上表示对唯一bean id的引用。好的限定符值是main、EMEA或persistent，表示独立于bean id的特定组件的特征，在匿名bean定义（如前面示例中的定义）的情况下，可以自动生成这些特征。
 
 限定符也适用于类型化集合，如前面讨论的-例如，设置<MovieCatalog>。在这种情况下，根据声明的限定符，所有匹配的bean都作为集合注入。这意味着限定符不必是唯一的。相反，它们构成了过滤标准。例如，可以定义多个具有相同限定符值“action”的MovieCatalog bean，所有这些限定符值都被注入到一个用@qualifier（“action”）注解的集合中。
 
 >让限定符值根据目标bean名称在类型匹配候选中进行选择，不需要在注入点处使用@Qualifier注解。如果没有其他分辨标记（例如限定符或主标记），对于非唯一依赖关系情况，Spring将针对目标bean名称匹配注入点名称（即字段名称或参数名称），来选择相同的命名候选对象（如果有）。
     
->也就是说，如果您打算用名称表示注解驱动的注入，那么不要主要使用@Autowired，即使它能够在类型匹配的候选对象中通过bean名称进行选择。相反，使用JSR-250 @Resource注解，该注解在语义上定义为通过其唯一名称标识特定的目标组件，声明的类型与匹配过程无关。@Autowired有相当不同的语义：在按类型选择候选bean之后，指定的字符串限定符值只在那些类型选择的候选对象中考虑（例如，将account限定符与标记有相同限定符标签的bean匹配）。
+>也就是说，如果你打算用名称表示注解驱动的注入，那么不要主要使用@Autowired，即使它能够在类型匹配的候选对象中通过bean名称进行选择。相反，使用JSR-250 @Resource注解，该注解在语义上定义为通过其唯一名称标识特定的目标组件，声明的类型与匹配过程无关。@Autowired有相当不同的语义：在按类型选择候选bean之后，指定的字符串限定符值只在那些类型选择的候选对象中考虑（例如，将account限定符与标记有相同限定符标签的bean匹配）。
     
 >对于本身定义为集合、映射或数组类型的bean，@Resource是一个很好的解决方案，它通过唯一的名称引用特定的集合或数组bean。也就是说，从4.3版的collection开始，只要元素类型信息保存在@Bean返回类型签名或集合继承层次结构中，就可以通过spring的@Autowired类型匹配算法来匹配map和数组类型。在这种情况下，可以使用限定符值在相同类型的集合中进行选择，如前一段所述。
     
->从4.3开始，@Autowired还考虑了注入的自引用（即，返回当前注入的bean的引用）。请注意，自注入是一种回退。对其他组件的常规依赖始终具有优先权。从这个意义上说，自我推荐人不参与定期的候选人选择，相反，它们总是以最低优先级结束。在实践中，您应该只使用自引用作为最后的手段（例如，通过bean的事务代理在同一实例上调用其他方法）。在这种情况下，考虑将受影响的方法分解为单独的委托bean。或者，您可以使用@Resource，它可以通过其唯一的名称将代理返回到当前bean。
+>从4.3开始，@Autowired还考虑了注入的自引用（即，返回当前注入的bean的引用）。请注意，自注入是一种回退。对其他组件的常规依赖始终具有优先权。从这个意义上说，自我推荐人不参与定期的候选人选择，相反，它们总是以最低优先级结束。在实践中，你应该只使用自引用作为最后的手段（例如，通过bean的事务代理在同一实例上调用其他方法）。在这种情况下，考虑将受影响的方法分解为单独的委托bean。或者，你可以使用@Resource，它可以通过其唯一的名称将代理返回到当前bean。
     
 >@Autowired应用于字段、构造函数和多参数方法，允许在参数级别缩小限定符注解的范围。相反，只有具有单个参数的字段和bean属性setter方法才支持@Resource。因此，如果注入目标是一个构造函数或多参数方法，那么应该坚持使用限定符。
     
-您可以创建自己的自定义限定符注解。为此，请定义一个注解并在定义中提供@Qualifier注解，如下示例所示：
+你可以创建自己的自定义限定符注解。为此，请定义一个注解并在定义中提供@Qualifier注解，如下示例所示：
 
 
 ```
@@ -449,7 +449,7 @@ public class MovieRecommender {
 }
 ```
 
-接下来，您可以为候选bean定义提供信息。可以添加&lt;qualifier/>标记作为&lt;bean/>标记的子元素，然后指定type和value以匹配自定义限定符注解。类型与注解的完全限定类名匹配。或者，为了方便起见，如果不存在名称冲突的风险，可以使用短类名。下面的示例演示了这两种方法：
+接下来，你可以为候选bean定义提供信息。可以添加&lt;qualifier/>标记作为&lt;bean/>标记的子元素，然后指定type和value以匹配自定义限定符注解。类型与注解的完全限定类名匹配。或者，为了方便起见，如果不存在名称冲突的风险，可以使用短类名。下面的示例演示了这两种方法：
 
 
 ```
@@ -482,7 +482,7 @@ public class MovieRecommender {
 
 在类路径扫描和托管组件中，可以看到基于注解的替代方案，以XML形式提供限定符元数据。具体来说，请参见为限定符元数据提供注解。
 
-在某些情况下，使用不带值的注解可能就足够了。当注解具有更一般的用途并且可以应用于多个不同类型的依赖项时，这一点非常有用。例如，您可以提供一个脱机目录，当没有可用的Internet连接时可以搜索该目录。首先，定义简单注解，如下示例所示：
+在某些情况下，使用不带值的注解可能就足够了。当注解具有更一般的用途并且可以应用于多个不同类型的依赖项时，这一点非常有用。例如，你可以提供一个脱机目录，当没有可用的Internet连接时可以搜索该目录。首先，定义简单注解，如下示例所示：
 
 
 ```
@@ -516,7 +516,7 @@ public class MovieRecommender {
 </bean>
 ```
 
-您还可以定义自定义限定符注解，这些注解接受除简单值属性之外的命名属性，或者不接受简单值属性。如果在要自动注入的字段或参数上指定多个属性值，则bean定义必须匹配所有此类属性值，才能被视为自动连线注入。例如，考虑以下注解定义：
+你还可以定义自定义限定符注解，这些注解接受除简单值属性之外的命名属性，或者不接受简单值属性。如果在要自动注入的字段或参数上指定多个属性值，则bean定义必须匹配所有此类属性值，才能被视为自动连线注入。例如，考虑以下注解定义：
 
 
 ```
@@ -613,7 +613,7 @@ public class MovieRecommender {
 
 ## 1.9.5 使用泛型作为自动装载限定符
 
-除了@Qualifier注解外，还可以使用Java泛型类型作为隐式的限定形式。例如，假设您具有以下配置：
+除了@Qualifier注解外，还可以使用Java泛型类型作为隐式的限定形式。例如，假设你具有以下配置：
 
 
 ```
@@ -632,7 +632,7 @@ public class MyConfiguration {
 }
 ```
 
-假设前面的bean实现了一个通用接口（即Store&lt;string>和Store&lt;integer>），您可以@Autowire Store接口，并将泛型用作限定符，如下例所示：
+假设前面的bean实现了一个通用接口（即Store&lt;string>和Store&lt;integer>），你可以@Autowire Store接口，并将泛型用作限定符，如下例所示：
 
 
 ```
@@ -655,7 +655,7 @@ private List<Store<Integer>> s;
 
 ## 1.9.6 使用CustomAutowireConfigurer
 
-CustomAutoWireConfigurer是一个BeanFactoryPostProcessor，它允许您注册自己的自定义限定符注解类型，即使它们没有用Spring的@Qualifier进行注解。下面的示例演示如何使用CustomAutoWireConfigurer：
+CustomAutoWireConfigurer是一个BeanFactoryPostProcessor，它允许你注册自己的自定义限定符注解类型，即使它们没有用Spring的@Qualifier进行注解。下面的示例演示如何使用CustomAutoWireConfigurer：
 
 
 ```
@@ -711,7 +711,7 @@ public class SimpleMovieLister {
 }
 ```
 
->注解提供的名称由CommonAnnotationBeanPostProcessor知道的ApplicationContext解析为bean名称。如果显式配置Spring的SimpleJndiBeanFactory，则可以通过JNDI解析名称。但是，我们建议您依赖默认行为，并使用Spring的JNDI查找功能来保持间接寻址的级别。
+>注解提供的名称由CommonAnnotationBeanPostProcessor知道的ApplicationContext解析为bean名称。如果显式配置Spring的SimpleJndiBeanFactory，则可以通过JNDI解析名称。但是，我们建议你依赖默认行为，并使用Spring的JNDI查找功能来保持间接寻址的级别。
     
 在@Resource用法中，如果没有指定显式名称，并且类似于@Autowired，@Resource会找到一个主类型匹配，而不是指定的bean，并解析已知的可解析依赖项：BeanFactory、ApplicationContext、ResourceLoader、ApplicationEventPublisher，和MessageSource接口。
 
