--- a/Core/2.7Application-Contexts-and-Resource-Paths.md
+++ b/Core/2.7Application-Contexts-and-Resource-Paths.md
@@ -32,7 +32,7 @@ ApplicationContext ctx =
 
 **构造ClassPathXmlApplicationContext-快捷方式**
 
-ClassPathXmlApplicationContext公开了许多构造函数，以方便实例化。基本思想是，您只需提供一个字符串数组，该数组只包含XML文件本身的文件名（不包含前导路径信息），还提供一个类。然后，ClassPathXmlApplicationContext从提供的类中派生路径信息。
+ClassPathXmlApplicationContext公开了许多构造函数，以方便实例化。基本思想是，你只需提供一个字符串数组，该数组只包含XML文件本身的文件名（不包含前导路径信息），还提供一个类。然后，ClassPathXmlApplicationContext从提供的类中派生路径信息。
 
 考虑下面的文件结构：
 
@@ -93,7 +93,7 @@ ApplicationContext ctx =
 
 >通配符类路径依赖于基础类加载器的getResources（）方法。由于现在大多数应用程序服务器都提供自己的类加载器实现，因此其行为可能会有所不同，尤其是在处理JAR文件时。检查ClassPath*是否有效的一个简单测试是使用ClassLoader从类路径上的jar中加载文件：getClass().getClassLoader().getResources("\<someFileInsideTheJar>")。尝试使用具有相同名称但位于两个不同位置的文件进行此测试。如果返回不适当的结果，请检查应用程序服务器文档中可能影响类加载器行为的设置。
 
-您还可以在位置路径的其余部分（例如，classpath*:META-INF/\*-beans.xml）中将classpath*：前缀与PathMatcher模式组合。在这种情况下，解析策略相当简单：在最后一个非通配符路径段上使用ClassLoader.getResources()调用以获取类加载程序层次结构中的所有匹配资源，然后在每个资源上，使用前面描述的相同路径匹配器解析策略通配符子路径。
+你还可以在位置路径的其余部分（例如，classpath*:META-INF/\*-beans.xml）中将classpath*：前缀与PathMatcher模式组合。在这种情况下，解析策略相当简单：在最后一个非通配符路径段上使用ClassLoader.getResources()调用以获取类加载程序层次结构中的所有匹配资源，然后在每个资源上，使用前面描述的相同路径匹配器解析策略通配符子路径。
 
 **通配符的其他关注点**
 
@@ -101,7 +101,7 @@ ApplicationContext ctx =
 
 Spring检索类路径条目的能力源自JDK的 ClassLoader.getResources()）方法，该方法只返回空字符串的文件系统位置（指示要搜索的潜在根）。Spring也评估了JAR文件中的URLClassLoader运行时配置和java.class.path清单，但这并不保证会导致可移植行为。
 
->扫描classpath包需要在classpath中存在相应的目录。当您使用Ant构建JAR时，不要激活JAR任务的“仅文件”开关。此外，根据某些环境中的安全策略，类路径目录可能不会被公开-例如，JDK 1.7.0 U45及更高版本上的独立应用程序（需要在清单中设置“可信库”）。请参阅https://stackoverflow.com/questions/19394570/java-jre-7u45-breaks-classloader-getresources）。
+>扫描classpath包需要在classpath中存在相应的目录。当你使用Ant构建JAR时，不要激活JAR任务的“仅文件”开关。此外，根据某些环境中的安全策略，类路径目录可能不会被公开-例如，JDK 1.7.0 U45及更高版本上的独立应用程序（需要在清单中设置“可信库”）。请参阅https://stackoverflow.com/questions/19394570/java-jre-7u45-breaks-classloader-getresources）。
 >在JDK9的模块路径（Jigsaw）上，Spring的类路径扫描通常按预期工作。在这里，将资源放入一个专用的目录也是非常推荐的，这样可以避免前面提到的在搜索JAR文件根级别时的可移植性问题。
 
 Ant-style 模式classpath: resources 并不一定能保证匹配的资源，如果要搜索的根package存在于多个类路径地址中。考虑下面的资源情况：
@@ -116,7 +116,7 @@ com/mycompany/package1/service-context.xml
 classpath:com/mycompany/**/service-context.xml
 ~~~
 
-这样的资源只能位于一个位置，但是当使用前面的示例这样的路径来尝试解析它时，解析程序将使用getResource（“com/mycompany”）；返回的（第一个）URL。如果此基本包节点存在于多个类加载器位置中，则实际的最终资源可能找不到。因此，在这种情况下，您应该更喜欢使用具有相同ant样式模式的classpath*:来搜索包含根包的所有类路径位置。
+这样的资源只能位于一个位置，但是当使用前面的示例这样的路径来尝试解析它时，解析程序将使用getResource（“com/mycompany”）；返回的（第一个）URL。如果此基本包节点存在于多个类加载器位置中，则实际的最终资源可能找不到。因此，在这种情况下，你应该更喜欢使用具有相同ant样式模式的classpath*:来搜索包含根包的所有类路径位置。
 
 ## 2.7.3 FileSystemResource注意事项
 
