--- a/Core/3.1Spring-validator-interface.md
+++ b/Core/3.1Spring-validator-interface.md
@@ -1,6 +1,6 @@
 # 3.1 使用Spring Validator接口
 
-Spring提供了一个Validator接口，您可以使用它来验证对象。Validator接口通过使用Errors对象工作，以便在验证时，验证程序可以向Errors对象报告验证失败。
+Spring提供了一个Validator接口，你可以使用它来验证对象。Validator接口通过使用Errors对象工作，以便在验证时，验证程序可以向Errors对象报告验证失败。
 
 考虑下面的小数据对象示例：
 
