--- a/Core/3.3BeanWrapper.md
+++ b/Core/3.3BeanWrapper.md
@@ -15,7 +15,7 @@ account.name|指示account内部的name属性，对应getAccount().setName() 和
 account[2]|指示account的第三个元素，索引属性可以是array, list或者其他的自然排序的集合。
 account[COMPANYNAME]|一个map，key是COMPANYNAMEs
 
-（如果您不打算直接使用BeanWrapper，那么下一节对您来说并不重要。如果只使用DataBinder和BeanFactory及其默认实现，则应跳到PropertyEditors部分。）
+（如果你不打算直接使用BeanWrapper，那么下一节对你来说并不重要。如果只使用DataBinder和BeanFactory及其默认实现，则应跳到PropertyEditors部分。）
 
 下面的例子使用BeanWrapper来get和set属性：
 
@@ -107,7 +107,7 @@ CustomCollectionEditor|集合的属性编辑器，将任何源集合转换为给
 CustomDateEditor|java.util.date的可自定义属性编辑器，支持自定义日期格式。默认情况下未注册。必须根据需要使用适当的格式进行用户注册。
 CustomNumberEditor|任何数字子类（如integer、long、float或double）的可自定义属性编辑器。默认情况下，由BeanWrapperImpl注册，但可以通过将其自定义实例注册为自定义编辑器来重写。
 FileEditor|将String解析成为java.io.File对象。默认由BeanWrapperImpl来注册。
-InputStreamEditor|单向属性编辑器，它可以获取一个字符串并（通过中间的ResourceEditor和Resource）生成一个InputStream，以便InputStream属性可以直接设置为字符串。请注意，默认用法不会为您关闭inputstream。默认情况下，由BeanWrapperImpl注册。
+InputStreamEditor|单向属性编辑器，它可以获取一个字符串并（通过中间的ResourceEditor和Resource）生成一个InputStream，以便InputStream属性可以直接设置为字符串。请注意，默认用法不会为你关闭inputstream。默认情况下，由BeanWrapperImpl注册。
 LocaleEditor|可以将字符串解析为区域设置对象，反之亦然（字符串格式为[country][variant]，与区域设置的toString（）方法相同）。默认情况下，由BeanWrapperImpl注册。
 PatternEditor|可以将字符串解析为java.util.regex.Pattern对象，反之亦然。
 PropertiesEditor|可以将字符串（使用java.util.Properties类的javadoc中定义的格式格式化）转换为属性对象。默认情况下，由BeanWrapperImpl注册。
@@ -159,13 +159,13 @@ public class SomethingBeanInfo extends SimpleBeanInfo {
 
 当将bean属性设置为字符串值时，SpringIOC容器最终使用标准JavaBeans PropertyEditor实现将这些字符串转换为复杂的属性类型。Spring预先注册了许多自定义的PropertyEditor实现（例如，将用字符串表示的类名转换为类对象）。此外，Java的标准JavaBeans PropertyEditor查找机制允许一个类的PropertyEditor被适当地命名，并放置在与它提供支持的类相同的包中，以便可以自动找到它。
 
-如果需要注册其他自定义PropertyEditors，可以使用几种机制。通常不方便或不推荐使用的最手动的方法是使用ConfigurableBeanFactory接口的registerCustomEditor（）方法，前提是您有BeanFactory引用。
+如果需要注册其他自定义PropertyEditors，可以使用几种机制。通常不方便或不推荐使用的最手动的方法是使用ConfigurableBeanFactory接口的registerCustomEditor（）方法，前提是你有BeanFactory引用。
 
-另一种（稍微方便一点）机制是使用一个特殊的bean工厂后处理器，称为CustomEditorConfigurer。尽管您可以将bean工厂后处理器与BeanFactory实现结合使用，但CustomEditorConfigurer有一个嵌套的属性设置，因此我们强烈建议您将其与ApplicationContext结合使用，在这里您可以以类似于任何其他bean的方式部署它，并且在那里它可以自动化。检测并应用。
+另一种（稍微方便一点）机制是使用一个特殊的bean工厂后处理器，称为CustomEditorConfigurer。尽管你可以将bean工厂后处理器与BeanFactory实现结合使用，但CustomEditorConfigurer有一个嵌套的属性设置，因此我们强烈建议你将其与ApplicationContext结合使用，在这里你可以以类似于任何其他bean的方式部署它，并且在那里它可以自动化。检测并应用。
 
 注意，所有bean工厂和应用程序上下文都自动使用许多内置的属性编辑器，通过使用BeanWrapper来处理属性转换。BeanWrapper注册器的标准属性编辑器在前一节中列出。此外，ApplicationContexts还重写或添加其他编辑器，以便以适合特定应用程序上下文类型的方式处理资源查找。
 
-标准JavaBeans PropertyEditor实例用于将表示为字符串的属性值转换为属性的实际复杂类型。您可以使用bean工厂后处理器CustomEditorConfigurer，方便地向应用程序上下文添加对其他PropertyEditor实例的支持。
+标准JavaBeans PropertyEditor实例用于将表示为字符串的属性值转换为属性的实际复杂类型。你可以使用bean工厂后处理器CustomEditorConfigurer，方便地向应用程序上下文添加对其他PropertyEditor实例的支持。
 
 考虑以下示例，它定义了一个名为ExoticType的用户类和另一个名为DependsOneXoticType的类，该类需要将ExoticType设置为属性：
 
@@ -227,7 +227,7 @@ public class ExoticTypeEditor extends PropertyEditorSupport {
 
 另一种机制来注册属性编辑器到Spring容器的方法就是使用PropertyEditorRegistrar。
 
-当您需要在几个不同的情况下使用同一组属性编辑器时，此接口特别有用。您可以编写相应的注册器，并在每种情况下重用它。PropertyEditorRegistrar实例与名为PropertyEditorRegistry的接口一起工作，后者是由SpringBeanWrapper（和DataBinder）实现的接口。当与CustomEditorConfigurer（此处描述）结合使用时，PropertyEditorRegistrar实例特别方便，后者公开了一个名为setPropertyEditorRegistrars（..）的属性。以这种方式添加到CustomEditorConfigurer的PropertyEditorRegistrar实例可以很容易地与DataBinder和SpringMVC控制器共享。此外，它还避免了在自定义编辑器上同步的需要：一个PropertyEditorRegistrar应该为每个bean创建尝试创建新的PropertyEditor实例。
+当你需要在几个不同的情况下使用同一组属性编辑器时，此接口特别有用。你可以编写相应的注册器，并在每种情况下重用它。PropertyEditorRegistrar实例与名为PropertyEditorRegistry的接口一起工作，后者是由SpringBeanWrapper（和DataBinder）实现的接口。当与CustomEditorConfigurer（此处描述）结合使用时，PropertyEditorRegistrar实例特别方便，后者公开了一个名为setPropertyEditorRegistrars（..）的属性。以这种方式添加到CustomEditorConfigurer的PropertyEditorRegistrar实例可以很容易地与DataBinder和SpringMVC控制器共享。此外，它还避免了在自定义编辑器上同步的需要：一个PropertyEditorRegistrar应该为每个bean创建尝试创建新的PropertyEditor实例。
 
 下面例子展示了如何创建你自己的PropertyEditorRegistrar：
 
