--- a/Core/3.4Spring-type-conversion.md
+++ b/Core/3.4Spring-type-conversion.md
@@ -2,7 +2,7 @@
 
 Spring3 引入了一个core.convert包，提供通用的type转换方法。系统定义了SPI来实现类型转换逻辑和一个API来在运行时实现类型转换。
 
-在Spring容器中，可以使用此系统作为PropertyEditor实现的替代方法，将外部化的bean属性值字符串转换为所需的属性类型。您还可以在应用程序中需要类型转换的任何地方使用公共API。
+在Spring容器中，可以使用此系统作为PropertyEditor实现的替代方法，将外部化的bean属性值字符串转换为所需的属性类型。你还可以在应用程序中需要类型转换的任何地方使用公共API。
 
 ## 3.4.1 转换SPI
 
@@ -77,7 +77,7 @@ final class StringToEnumConverterFactory implements ConverterFactory<String, Enu
 
 ## 3.4.3 使用GenericConverter
 
-当需要复杂的Converter实现时，请考虑使用GenericConverter接口。与Converter相比，GenericConverter具有更灵活但不太强类型的签名，它支持在多个源类型和目标类型之间进行转换。此外，GenericConverter提供了可用的源和目标字段上下文，您可以在实现转换逻辑时使用它们。这样的上下文允许类型转换由字段注解或字段签名上声明的一般信息驱动。下面的列表显示了GenericConverter的接口定义：
+当需要复杂的Converter实现时，请考虑使用GenericConverter接口。与Converter相比，GenericConverter具有更灵活但不太强类型的签名，它支持在多个源类型和目标类型之间进行转换。此外，GenericConverter提供了可用的源和目标字段上下文，你可以在实现转换逻辑时使用它们。这样的上下文允许类型转换由字段注解或字段签名上声明的一般信息驱动。下面的列表显示了GenericConverter的接口定义：
 
 ~~~
 package org.springframework.core.convert.converter;
@@ -98,7 +98,7 @@ GenericConverter的一个很好的例子是在Java数组和集合之间转换的
 
 **使用ConditionalGenericConverter**
 
-有时，您只希望在特定条件成立时运行Converter。例如，您可能只希望在目标字段上存在特定批注时运行Converter，也可能只希望在目标类上定义特定方法（如静态valueof方法）时运行Converter。ConditionalGenericConverter是GenericConverter和ConditionalConverter接口的联合，可用于定义此类自定义匹配条件：
+有时，你只希望在特定条件成立时运行Converter。例如，你可能只希望在目标字段上存在特定批注时运行Converter，也可能只希望在目标类上定义特定方法（如静态valueof方法）时运行Converter。ConditionalGenericConverter是GenericConverter和ConditionalConverter接口的联合，可用于定义此类自定义匹配条件：
 
 ~~~
 public interface ConditionalConverter {
@@ -110,7 +110,7 @@ public interface ConditionalGenericConverter extends GenericConverter, Condition
 }
 ~~~
 
-一个ConditionalGenericConverter的很好的例子是EntityConverter，它在持久实体标识符和实体引用之间进行转换。只有当目标实体类型声明静态finder方法（例如findAccount（long））时，这样的EntityConverter才可能匹配。您可以在匹配项（typescriptor、typescriptor）的实现中执行这样的finder方法检查。
+一个ConditionalGenericConverter的很好的例子是EntityConverter，它在持久实体标识符和实体引用之间进行转换。只有当目标实体类型声明静态finder方法（例如findAccount（long））时，这样的EntityConverter才可能匹配。你可以在匹配项（typescriptor、typescriptor）的实现中执行这样的finder方法检查。
 
 ## 3.4.4 ConversionService API
 
@@ -138,7 +138,7 @@ core.convert.support包中提供了一个健壮的conversionService实现。Gene
 
 ## 3.4.5 配置ConversionService
 
-ConversionService是一个无状态对象，设计为在应用程序启动时实例化，然后在多个线程之间共享。在Spring应用程序中，通常为每个Spring容器（或ApplicationContext）配置ConversionService实例。Spring接收转换服务，并在框架需要执行类型转换时使用它。您还可以将此ConversionService注入到任何bean中，并直接调用它。
+ConversionService是一个无状态对象，设计为在应用程序启动时实例化，然后在多个线程之间共享。在Spring应用程序中，通常为每个Spring容器（或ApplicationContext）配置ConversionService实例。Spring接收转换服务，并在框架需要执行类型转换时使用它。你还可以将此ConversionService注入到任何bean中，并直接调用它。
 
 >如果没有ConversionService注册到Spring，那么原始的PropertyEditor将会被使用。
 
