--- a/Core/3.5Spring-Field-Formatting.md
+++ b/Core/3.5Spring-Field-Formatting.md
@@ -2,9 +2,9 @@
 
 如前一节所述，core.convert是一个通用类型转换系统。它提供了一个统一的ConversionServiceAPI以及一个强类型转换器SPI，用于实现从一种类型到另一种类型的转换逻辑。Spring容器使用此系统绑定bean属性值。此外，Spring表达式语言（SPEL）和DataBinder都使用此系统绑定字段值。例如，当SPEL需要将short强制为long以完成expression.setValue（object bean，object value）尝试时，core.convert系统将执行强制。
 
-现在考虑典型客户机环境（如Web或桌面应用程序）的类型转换要求。在这种环境中，您通常从字符串转换为支持客户端回发过程，以及从字符串转换为支持视图呈现过程。此外，您通常需要本地化字符串值。更通用的core.convert转换器SPI不能直接满足这种格式要求。为了直接解决这些问题，Spring3引入了一个方便的格式化程序SPI，它为客户机环境提供了一个简单而健壮的PropertyEditor实现替代方案。
+现在考虑典型客户机环境（如Web或桌面应用程序）的类型转换要求。在这种环境中，你通常从字符串转换为支持客户端回发过程，以及从字符串转换为支持视图呈现过程。此外，你通常需要本地化字符串值。更通用的core.convert转换器SPI不能直接满足这种格式要求。为了直接解决这些问题，Spring3引入了一个方便的格式化程序SPI，它为客户机环境提供了一个简单而健壮的PropertyEditor实现替代方案。
 
-通常，当需要实现通用类型转换逻辑时，可以使用Converter SPI，例如，在java.util.Date和Long之间转换。当您在客户端环境（如Web应用程序）中工作并且需要分析和打印本地化字段值时，可以使用Formatter SPI。ConversionService为两个SPI提供统一的类型转换API。
+通常，当需要实现通用类型转换逻辑时，可以使用Converter SPI，例如，在java.util.Date和Long之间转换。当你在客户端环境（如Web应用程序）中工作并且需要分析和打印本地化字段值时，可以使用Formatter SPI。ConversionService为两个SPI提供统一的类型转换API。
 
 ## 3.5.1 Formatter SPI
 
@@ -140,7 +140,7 @@ public class MyModel {
 
 **Format注解API**
 
-org.springframework.format.annotation包中存在可移植format annotation API。您可以使用@NumberFormat来格式化Number字段，如Double和Long，使用@DateTimeFormat来格式化java.util.Date、java.util.Calendar, Long（毫秒时间戳）以及jsr-310 java.time和Joda-Time值类型。
+org.springframework.format.annotation包中存在可移植format annotation API。你可以使用@NumberFormat来格式化Number字段，如Double和Long，使用@DateTimeFormat来格式化java.util.Date、java.util.Calendar, Long（毫秒时间戳）以及jsr-310 java.time和Joda-Time值类型。
 
 以下示例使用@DateTimeFormat 将java.util.date格式化为ISO日期（yyyy-mm-dd）：
 ~~~
@@ -153,7 +153,7 @@ public class MyModel {
 
 ## 3.5.3 FormatterRegistry SPI
 
-FormatterRegistry是用于注册格式化程序和转换器的SPI。FormattingConversionService是一种适用于大多数环境的FormatTerregistry的实现。您可以通过编程或声明方式将此变量配置为SpringBean，例如，通过使用FormattingConversionServiceFactoryBean。因为这个实现也实现了ConversionService，所以可以直接配置它与Spring的DataBinder和Spring表达式语言（SPEL）一起使用。
+FormatterRegistry是用于注册格式化程序和转换器的SPI。FormattingConversionService是一种适用于大多数环境的FormatTerregistry的实现。你可以通过编程或声明方式将此变量配置为SpringBean，例如，通过使用FormattingConversionServiceFactoryBean。因为这个实现也实现了ConversionService，所以可以直接配置它与Spring的DataBinder和Spring表达式语言（SPEL）一起使用。
 
 下面的列表显示了FormatterRegistry SPI：
 ~~~
@@ -171,9 +171,9 @@ public interface FormatterRegistry extends ConverterRegistry {
 }
 ~~~
 
-如上面所示，您可以按字段类型或注解注册formatters。
+如上面所示，你可以按字段类型或注解注册formatters。
 
-FormatterRegistry SPI允许您集中配置格式化规则，而不是在控制器之间复制这样的配置。例如，您可能希望强制所有日期字段以某种方式格式化，或者具有特定注解的字段以某种方式格式化。使用共享FormatterRegistry，您只需定义一次这些规则，这些规则在需要格式化时会自动使用。
+FormatterRegistry SPI允许你集中配置格式化规则，而不是在控制器之间复制这样的配置。例如，你可能希望强制所有日期字段以某种方式格式化，或者具有特定注解的字段以某种方式格式化。使用共享FormatterRegistry，你只需定义一次这些规则，这些规则在需要格式化时会自动使用。
 
 ## 3.5.4 FormatterRegistrar SPI
 
