--- a/Core/3.6Global-Date-and-Time-Format.md
+++ b/Core/3.6Global-Date-and-Time-Format.md
@@ -2,7 +2,7 @@
 
 默认情况下，未用@DateTimeFormat注解的日期和时间字段使用DateFormat.SHORT style从字符串转换。如果愿意，可以通过定义自己的全局格式来更改此设置。
 
-为此，您需要确保Spring不注册默认格式化程序。相反，您应该手动注册所有格式化程序。使用org.springframework.format.datetime.joda.JodaTimeFormatterRegistrar或org.springframework.format.datetime.DateFormatterRegistrar 类，具体取决于是否使用Joda-Time 库。
+为此，你需要确保Spring不注册默认格式化程序。相反，你应该手动注册所有格式化程序。使用org.springframework.format.datetime.joda.JodaTimeFormatterRegistrar或org.springframework.format.datetime.DateFormatterRegistrar 类，具体取决于是否使用Joda-Time 库。
 
 例如，下面的Java配置注册一个全局yyyYMdD格式（这个示例不依赖于JoDA时间库）：
 
