--- a/Core/5.8Proxying-Mechanisms.md
+++ b/Core/5.8Proxying-Mechanisms.md
@@ -4,9 +4,9 @@ SpringAOP使用JDK动态代理或CGLIB为给定的目标对象创建代理。JDK
 
 如果要代理的目标对象实现至少一个接口，则使用JDK动态代理。由目标类型实现的所有接口都是代理的。如果目标对象不实现任何接口，则创建一个CGLIB代理。
 
-如果要强制使用CGLIB代理（例如，代理为目标对象定义的每个方法，而不仅仅是由其接口实现的方法），可以这样做。但是，您应该考虑以下问题：
+如果要强制使用CGLIB代理（例如，代理为目标对象定义的每个方法，而不仅仅是由其接口实现的方法），可以这样做。但是，你应该考虑以下问题：
 * 对于cglib，不能通知final方法，因为它们不能在运行时生成的子类中被重写。
-* 从Spring4.0开始，代理对象的构造函数不再被调用两次，因为cglib代理实例是通过Objenesis创建的。只有当您的JVM不允许绕过构造函数时，您可能会看到来自Spring的AOP支持的双重调用和相应的调试日志条目。
+* 从Spring4.0开始，代理对象的构造函数不再被调用两次，因为cglib代理实例是通过Objenesis创建的。只有当你的JVM不允许绕过构造函数时，你可能会看到来自Spring的AOP支持的双重调用和相应的调试日志条目。
   
 要强制使用cglib代理，请将&lt;aop:config>元素的proxy target class属性的值设置为true，如下所示：
 
@@ -30,7 +30,7 @@ SpringAOP使用JDK动态代理或CGLIB为给定的目标对象创建代理。JDK
 
 SpringAOP是基于代理的。在编写自己的方面或使用Spring框架提供的任何基于SpringAOP的方面之前，掌握最后一条语句的实际语义是非常重要的。
 
-首先考虑一个场景，其中您有一个普通的、未代理的、没有什么特别之处的、直接的对象引用，如下面的代码片段所示：
+首先考虑一个场景，其中你有一个普通的、未代理的、没有什么特别之处的、直接的对象引用，如下面的代码片段所示：
 
 ~~~
 public class SimplePojo implements Pojo {
@@ -82,7 +82,7 @@ public class Main {
 
 这里要理解的关键是，主类的main（..）方法中的代码具有对代理的引用。这意味着对该对象引用的方法调用是对代理的调用。因此，代理可以委托给与该特定方法调用相关的所有拦截器（通知）。但是，一旦调用最终到达目标对象（在本例中为SimplePojo的引用），它可以对自身进行的任何方法调用（如this.bar（）或this.foo（））都将针对该引用而不是代理进行调用。这有重要的意义。这意味着自调用不会导致与方法调用相关联的advice获得执行的机会。
 
-好吧，那我们该怎么办？最好的方法（这里松散地使用术语“best”）是重构代码，这样就不会发生自调用。这确实需要你做一些工作，但这是最好的，微创的方法。下一个方法绝对是可怕的，我们毫不犹豫地指出它，正是因为它是如此可怕。您可以（尽管对我们来说很痛苦）将类中的逻辑完全绑定到SpringAOP，如下示例所示：
+好吧，那我们该怎么办？最好的方法（这里松散地使用术语“best”）是重构代码，这样就不会发生自调用。这确实需要你做一些工作，但这是最好的，微创的方法。下一个方法绝对是可怕的，我们毫不犹豫地指出它，正是因为它是如此可怕。你可以（尽管对我们来说很痛苦）将类中的逻辑完全绑定到SpringAOP，如下示例所示：
 
 ~~~
 public class SimplePojo implements Pojo {
@@ -98,7 +98,7 @@ public class SimplePojo implements Pojo {
 }
 ~~~
 
-这完全将您的代码与SpringAOP结合在一起，并且它使类本身意识到它正在一个AOP上下文中使用，而这个AOP上下文在AOP的面前飞驰。在创建代理时，它还需要一些额外的配置，如下示例所示：
+这完全将你的代码与SpringAOP结合在一起，并且它使类本身意识到它正在一个AOP上下文中使用，而这个AOP上下文在AOP的面前飞驰。在创建代理时，它还需要一些额外的配置，如下示例所示：
 
 ~~~
 public class Main {
