--- a/Core/6.7Manipulating-Advised-Objects.md
+++ b/Core/6.7Manipulating-Advised-Objects.md
@@ -1,6 +1,6 @@
 # 6.7 操作被通知的对象
 
-但是，您可以通过使用org.springframework.aop.framework.advised接口来创建AOP代理，从而对其进行操作。任何AOP代理都可以强制转换到此接口，不管它实现了哪个其他接口。此接口包括以下方法：
+但是，你可以通过使用org.springframework.aop.framework.advised接口来创建AOP代理，从而对其进行操作。任何AOP代理都可以强制转换到此接口，不管它实现了哪个其他接口。此接口包括以下方法：
 
 ~~~java
 Advisor[] getAdvisors();
@@ -24,11 +24,11 @@ boolean replaceAdvisor(Advisor a, Advisor b) throws AopConfigException;
 boolean isFrozen();
 ~~~
 
-getAdvisors（）方法返回已添加到工厂的每个Advisor、拦截器或其他通知类型的顾问。如果添加了Advisor，则此索引处返回的advisor是您添加的对象。如果您添加了一个拦截器或其他通知类型，那么Spring将它包装在一个顾问中，并使用一个始终返回true的切入点。因此，如果添加了一个SystemInterceptor，则为该索引返回的Advisor是一个返回SystemInterceptor的DefaultPointcutAdvisor，以及一个匹配所有类和方法的切入点。
+getAdvisors（）方法返回已添加到工厂的每个Advisor、拦截器或其他通知类型的顾问。如果添加了Advisor，则此索引处返回的advisor是你添加的对象。如果你添加了一个拦截器或其他通知类型，那么Spring将它包装在一个顾问中，并使用一个始终返回true的切入点。因此，如果添加了一个SystemInterceptor，则为该索引返回的Advisor是一个返回SystemInterceptor的DefaultPointcutAdvisor，以及一个匹配所有类和方法的切入点。
 
-addAdvisor（）方法可用于添加任何Advisor。通常，持有切入点和建议的Advisor是DefaultPointcutAdvisor，您可以将其用于任何建议或切入点（但不用于introductions）。
+addAdvisor（）方法可用于添加任何Advisor。通常，持有切入点和建议的Advisor是DefaultPointcutAdvisor，你可以将其用于任何建议或切入点（但不用于introductions）。
 
-默认情况下，即使创建了代理，也可以添加或删除顾问或拦截器。唯一的限制是不可能添加或删除简介顾问，因为工厂的现有代理不显示接口更改。（您可以从工厂获取新代理以避免此问题。）
+默认情况下，即使创建了代理，也可以添加或删除顾问或拦截器。唯一的限制是不可能添加或删除简介顾问，因为工厂的现有代理不显示接口更改。（你可以从工厂获取新代理以避免此问题。）
 
 下面的示例显示将AOP代理强制转换到Advised的接口，并检查和操作其advice：
 
