--- a/DataAccess/3.2Package-Hierarchy.md
+++ b/DataAccess/3.2Package-Hierarchy.md
@@ -8,5 +8,5 @@ Spring框架的JDBC抽象框架由四个不同的软件包组成：
 
 * object：org.springframework.jdbc.object包包含一些类，这些类将RDBMS查询，更新和存储过程表示为线程安全的可重用对象。请参阅将JDBC操作建模为Java对象。尽管查询返回的对象自然会与数据库断开连接，但是JDO对此方法进行了建模。较高级别的JDBC抽象取决于org.springframework.jdbc.core软件包中的较低级别的抽象。
 
-* support：org.springframework.jdbc.support软件包提供SQLException转换功能和一些实用程序类。 JDBC处理期间引发的异常将转换为org.springframework.dao包中定义的异常。这意味着使用Spring JDBC抽象层的代码不需要实现JDBC或RDBMS特定的错误处理。所有翻译的异常均未选中，这使您可以选择捕获可以从中恢复的异常，同时将其他异常传播到调用方。请参见使用SQLExceptionTranslator。
+* support：org.springframework.jdbc.support软件包提供SQLException转换功能和一些实用程序类。 JDBC处理期间引发的异常将转换为org.springframework.dao包中定义的异常。这意味着使用Spring JDBC抽象层的代码不需要实现JDBC或RDBMS特定的错误处理。所有翻译的异常均未选中，这使你可以选择捕获可以从中恢复的异常，同时将其他异常传播到调用方。请参见使用SQLExceptionTranslator。
 
