--- a/DataAccess/3.JDBC.md
+++ b/DataAccess/3.JDBC.md
@@ -1,6 +1,6 @@
 # 3. JDBC
 
-Spring Framework JDBC抽象提供的值可能最好通过下表中列出的操作序列来显示。 该表显示了Spring负责的操作以及您负责的操作。
+Spring Framework JDBC抽象提供的值可能最好通过下表中列出的操作序列来显示。 该表显示了Spring负责的操作以及你负责的操作。
 
 Action|Spring|You
 -|-|-
