--- a/Testing/3.2Goals-of-Integration-Testing.md
+++ b/Testing/3.2Goals-of-Integration-Testing.md
@@ -24,7 +24,7 @@ Spring TestContext Framework提供Spring ApplicationContext实例和WebApplicati
 
 ## 3.2.2 测试装置的依赖注入
 
-当TestContext框架加载应用程序上下文时，它可以选择使用依赖注入来配置测试类的实例。这提供了一种方便的机制，可以通过使用应用程序上下文中的预配置bean来设置测试装置。这里的一个重要好处是您可以在各种测试场景中重用应用程序上下文（例如，用于配置Spring管理的对象图，事务代理，DataSource实例等），从而避免复制单个测试的复杂测试装置设置的需要案例。
+当TestContext框架加载应用程序上下文时，它可以选择使用依赖注入来配置测试类的实例。这提供了一种方便的机制，可以通过使用应用程序上下文中的预配置bean来设置测试装置。这里的一个重要好处是你可以在各种测试场景中重用应用程序上下文（例如，用于配置Spring管理的对象图，事务代理，DataSource实例等），从而避免复制单个测试的复杂测试装置设置的需要案例。
 
 作为示例，考虑我们有一个类（HibernateTitleRepository）实现Title域实体的数据访问逻辑的场景。我们想编写测试以下方面的集成测试：
 
@@ -38,22 +38,22 @@ Spring TestContext Framework提供Spring ApplicationContext实例和WebApplicati
 
 ## 3.2.3 事务管理
 
-访问真实数据库的测试中的一个常见问题是它们对持久性存储的状态的影响。即使您使用开发数据库，​​对状态的更改也可能会影响将来的测试。此外，许多操作（例如插入或修改持久数据）无法在事务之外执行（或验证）。
+访问真实数据库的测试中的一个常见问题是它们对持久性存储的状态的影响。即使你使用开发数据库，​​对状态的更改也可能会影响将来的测试。此外，许多操作（例如插入或修改持久数据）无法在事务之外执行（或验证）。
 
-TestContext框架解决了这个问题。默认情况下，框架为每个测试创建并回滚事务。您可以编写可以假定存在事务的代码。如果在测试中调用事务代理对象，则根据其配置的事务语义，它们的行为正确。此外，如果测试方法在为测试管理的事务中运行时删除所选表的内容，则事务默认回滚，并且数据库返回到执行测试之前的状态。通过使用在测试的应用程序上下文中定义的PlatformTransactionManager bean，为测试提供事务支持。
+TestContext框架解决了这个问题。默认情况下，框架为每个测试创建并回滚事务。你可以编写可以假定存在事务的代码。如果在测试中调用事务代理对象，则根据其配置的事务语义，它们的行为正确。此外，如果测试方法在为测试管理的事务中运行时删除所选表的内容，则事务默认回滚，并且数据库返回到执行测试之前的状态。通过使用在测试的应用程序上下文中定义的PlatformTransactionManager bean，为测试提供事务支持。
 
-如果您希望事务提交（异常，但在您希望特定测试填充或修改数据库时偶尔有用），您可以通过使用@Commit注解告诉TestContext框架使事务提交而不是回滚。
+如果你希望事务提交（异常，但在你希望特定测试填充或修改数据库时偶尔有用），你可以通过使用@Commit注解告诉TestContext框架使事务提交而不是回滚。
 
 使用TestContext框架查看事务管理。
 
 ## 3.2.4 集成测试的支持类
 
-Spring TestContext Framework提供了几个抽象支持类，可以简化集成测试的编写。 这些基本测试类提供了定义良好的钩子到测试框架中，以及方便的实例变量和方法，使您可以访问：
+Spring TestContext Framework提供了几个抽象支持类，可以简化集成测试的编写。 这些基本测试类提供了定义良好的钩子到测试框架中，以及方便的实例变量和方法，使你可以访问：
 
 * ApplicationContext，用于执行显式bean查找或测试整个上下文的状态。
 
-* JdbcTemplate，用于执行SQL语句以查询数据库。 您可以在执行与数据库相关的应用程序代码之前和之后使用此类查询来确认数据库状态，Spring确保此类查询在与应用程序代码相同的事务范围内运行。 与ORM工具结合使用时，请务必避免误报。
+* JdbcTemplate，用于执行SQL语句以查询数据库。 你可以在执行与数据库相关的应用程序代码之前和之后使用此类查询来确认数据库状态，Spring确保此类查询在与应用程序代码相同的事务范围内运行。 与ORM工具结合使用时，请务必避免误报。
 
-此外，您可能希望使用特定于项目的实例变量和方法创建自己的自定义应用程序范围的超类。
+此外，你可能希望使用特定于项目的实例变量和方法创建自己的自定义应用程序范围的超类。
 
 请参阅TestContext框架的支持类。
