--- a/Core/2.2Resource-interface.md
+++ b/Core/2.2Resource-interface.md
@@ -42,7 +42,7 @@ Resource的比较重要的方法如下：
 
 Spring本身广泛使用Resource抽象，当需要资源时，它在许多方法签名中作为参数类型。某些Spring API中的其他方法（如各种ApplicationContext实现的构造函数）采用字符串，该字符串以未加修饰或简单的形式用于创建适合该上下文实现的资源，或者通过String路径上的特殊前缀让调用方指定必须创建特定的Resource实现。
 
-尽管在Spring中经常使用Resource接口，但在您自己的代码中单独使用作为通用实用程序类来访问资源实际上非常有用，即使您的代码不知道或不关心Spring的任何其他部分。虽然这将您的代码与Spring结合在一起，但它实际上只将它与这一小组实用程序类结合在一起，这些实用程序类可以作为URL的更强大的替代，并且可以被视为等同于为此目的而使用的任何其他库。
+尽管在Spring中经常使用Resource接口，但在你自己的代码中单独使用作为通用实用程序类来访问资源实际上非常有用，即使你的代码不知道或不关心Spring的任何其他部分。虽然这将你的代码与Spring结合在一起，但它实际上只将它与这一小组实用程序类结合在一起，这些实用程序类可以作为URL的更强大的替代，并且可以被视为等同于为此目的而使用的任何其他库。
 
 >Resource抽象并没有替代方法，它尽可能的使用包装。比如：UrlResource 包装了URL，然后使用被包装的URL去工作。
 
