--- a/Core/3.Validation-DataBinding-TypeConversion.md
+++ b/Core/3.Validation-DataBinding-TypeConversion.md
@@ -4,9 +4,9 @@
 
 数据绑定对于让用户输入动态绑定到应用程序的域模型（或用于处理用户输入的任何对象）非常有用。Spring提供了恰当命名的DataBinder来实现这一点。Validator和DataBinder组成validation包，该包主要用于但不限于MVC框架。
 
-BeanWrapper是Spring框架中的一个基本概念，在很多地方都有使用。但是，您可能不需要直接使用BeanWrapper。然而，由于这是参考指南，我们还是要按规则做一些说明。我们在本章中解释BeanWrapper，因为如果您要使用它，那么在尝试将数据绑定到对象时，您很可能会这样做。
+BeanWrapper是Spring框架中的一个基本概念，在很多地方都有使用。但是，你可能不需要直接使用BeanWrapper。然而，由于这是参考指南，我们还是要按规则做一些说明。我们在本章中解释BeanWrapper，因为如果你要使用它，那么在尝试将数据绑定到对象时，你很可能会这样做。
 
-Spring的DataBinder和较低级别的BeanWrapper都使用PropertyEditorsSupport实现来解析和格式化属性值。PropertyEditor和PropertyEditorSupport类型是JavaBeans规范的一部分，本章也将对此进行解释。Spring3引入了一个core.convert包，它提供了一个通用的类型转换工具，以及一个更高级的“格式”包，用于格式化UI字段值。您可以使用这些包作为PropertyEditorSupport实现的简单替代方案。本章还将讨论这些问题。
+Spring的DataBinder和较低级别的BeanWrapper都使用PropertyEditorsSupport实现来解析和格式化属性值。PropertyEditor和PropertyEditorSupport类型是JavaBeans规范的一部分，本章也将对此进行解释。Spring3引入了一个core.convert包，它提供了一个通用的类型转换工具，以及一个更高级的“格式”包，用于格式化UI字段值。你可以使用这些包作为PropertyEditorSupport实现的简单替代方案。本章还将讨论这些问题。
 
 >JSR-303/JSR-349 Bean Validation
 
