--- a/Core/9.2XML-Schemas-Authoring.md
+++ b/Core/9.2XML-Schemas-Authoring.md
@@ -2,11 +2,11 @@
 
 从版本2.0开始，Spring提供了一种机制，用于为基本的Spring XML格式添加基于模式的扩展，以定义和配置bean。本节介绍如何编写自己的自定义XML bean定义解析器并将这些解析器集成到Spring IoC容器中。
 
-为了便于创作使用模式感知XML编辑器的配置文件，Spring的可扩展XML配置机制基于XML Schema。如果您不熟悉Spring标准Spring发行版附带的当前XML配置扩展，则应首先阅读标题为[xsd-config]的附录。
+为了便于创作使用模式感知XML编辑器的配置文件，Spring的可扩展XML配置机制基于XML Schema。如果你不熟悉Spring标准Spring发行版附带的当前XML配置扩展，则应首先阅读标题为[xsd-config]的附录。
 
 要创建新的XML配置扩展：
 
-1. 编写XML模式来描述您的自定义元素。
+1. 编写XML模式来描述你的自定义元素。
 
 2. 编写自定义NamespaceHandler实现。
 
@@ -22,7 +22,7 @@
     lenient="true"/>
 ~~~
 
-（我们在本附录后面会包含更详细的示例。第一个简单示例的目的是引导您完成制作自定义扩展的基本步骤。）
+（我们在本附录后面会包含更详细的示例。第一个简单示例的目的是引导你完成制作自定义扩展的基本步骤。）
 
 ## 9.2.1 编写 Schema
 
@@ -73,7 +73,7 @@
 
 前两个片段中的第二个在容器中创建一个bean（由名称为SimpleDateFormat类型的dateFormat标识），并设置了几个属性。
 
->基于schema的创建配置格式的方法允许与具有schema感知XML编辑器的IDE紧密集成。 通过使用正确创作的架构，您可以使用自动完成功能让用户在枚举中定义的几个配置选项之间进行选择。
+>基于schema的创建配置格式的方法允许与具有schema感知XML编辑器的IDE紧密集成。 通过使用正确创作的架构，你可以使用自动完成功能让用户在枚举中定义的几个配置选项之间进行选择。
 
 ## 9.2.2 编写NamespaceHandler
 
@@ -87,7 +87,7 @@ NamespaceHandler接口有三个方法：
 
 * BeanDefinitionHolder decorate（Node，BeanDefinitionHolder，ParserContext）：当Spring遇到不同命名空间的属性或嵌套元素时调用。一个或多个bean定义的装饰（例如）与Spring支持的范围一起使用。我们首先展示一个简单的例子，不使用decoration，之后我们在一个更高级的例子中展示decoration。
 
-虽然您可以为整个命名空间编写自己的NamespaceHandler（因此提供解析命名空间中每个元素的代码），但通常情况是，Spring XML配置文件中的每个顶级XML元素都会生成一个bean定义（在我们的例子中，单个&lt;myns：dateformat />元素导致单个SimpleDateFormat bean定义）。 Spring提供了许多支持此场景的便捷类。在以下示例中，我们使用NamespaceHandlerSupport类：
+虽然你可以为整个命名空间编写自己的NamespaceHandler（因此提供解析命名空间中每个元素的代码），但通常情况是，Spring XML配置文件中的每个顶级XML元素都会生成一个bean定义（在我们的例子中，单个&lt;myns：dateformat />元素导致单个SimpleDateFormat bean定义）。 Spring提供了许多支持此场景的便捷类。在以下示例中，我们使用NamespaceHandlerSupport类：
 
 ~~~java
 package org.springframework.samples.xml;
@@ -164,7 +164,7 @@ public class SimpleDateFormatBeanDefinitionParser extends AbstractSingleBeanDefi
 
 （请记住：必须转义：字符。）
 
-建议您在类路径上与NamespaceHandler和BeanDefinitionParser类一起部署XSD文件（或多个文件）。
+建议你在类路径上与NamespaceHandler和BeanDefinitionParser类一起部署XSD文件（或多个文件）。
 
 ## 9.2.5 使用Spring XML Configuration的自定义扩展
 
@@ -392,9 +392,9 @@ public class ComponentBeanDefinitionParser extends AbstractBeanDefinitionParser 
 
 **自定义Normal Elements的属性**
 
-编写自己的自定义解析器和相关工件并不难。 但是，有时这不是正确的做法。 考虑需要向现有bean定义添加元数据的场景。 在这种情况下，您当然不希望编写自己的整个自定义扩展。 相反，您只想在现有bean定义元素中添加其他属性。
+编写自己的自定义解析器和相关工件并不难。 但是，有时这不是正确的做法。 考虑需要向现有bean定义添加元数据的场景。 在这种情况下，你当然不希望编写自己的整个自定义扩展。 相反，你只想在现有bean定义元素中添加其他属性。
 
-通过另一个示例，假设您为服务对象（未知）访问集群JCache定义了bean定义，并且您希望确保在周围集群中急切地启动指定的JCache实例。 以下清单显示了这样一个定义：
+通过另一个示例，假设你为服务对象（未知）访问集群JCache定义了bean定义，并且你希望确保在周围集群中急切地启动指定的JCache实例。 以下清单显示了这样一个定义：
 
 ~~~xml
 <bean id="checkingAccountService" class="com.foo.DefaultCheckingAccountService"
