--- a/DataAccess/2.DAO-Support.md
+++ b/DataAccess/2.DAO-Support.md
@@ -1,11 +1,11 @@
 # DAO支持
 
-Spring对数据访问对象（DAO）的支持旨在使以一致的方式轻松使用数据访问技术（例如JDBC，Hibernate或JPA）。这使您可以轻松地在上述持久性技术之间进行切换，还使您无需担心捕获每种技术特有的异常即可进行编码。
+Spring对数据访问对象（DAO）的支持旨在使以一致的方式轻松使用数据访问技术（例如JDBC，Hibernate或JPA）。这使你可以轻松地在上述持久性技术之间进行切换，还使你无需担心捕获每种技术特有的异常即可进行编码。
 
 ## 2.1 一致的异常层次结构
-Spring提供了从特定于技术的异常（例如SQLException）到其自己的异常类层次结构的便捷转换，该异常类层次结构以DataAccessException作为根异常。这些异常包装了原始异常，因此您永远不会丢失任何可能出错的信息。
+Spring提供了从特定于技术的异常（例如SQLException）到其自己的异常类层次结构的便捷转换，该异常类层次结构以DataAccessException作为根异常。这些异常包装了原始异常，因此你永远不会丢失任何可能出错的信息。
 
-除了JDBC异常，Spring还可以包装JPA和Hibernate特定的异常，将它们转换为一组集中的运行时异常。这样，您就可以仅在适当的层中处理大多数不可恢复的持久性异常，而无需在DAO中使用烦人的样板捕获和抛出块以及异常声明。 （尽管您仍然可以在任何需要的地方捕获和处理异常。）如上所述，JDBC异常（包括特定于数据库的方言）也被转换为相同的层次结构，这意味着您可以在一致的编程模型中对JDBC执行某些操作。 。
+除了JDBC异常，Spring还可以包装JPA和Hibernate特定的异常，将它们转换为一组集中的运行时异常。这样，你就可以仅在适当的层中处理大多数不可恢复的持久性异常，而无需在DAO中使用烦人的样板捕获和抛出块以及异常声明。 （尽管你仍然可以在任何需要的地方捕获和处理异常。）如上所述，JDBC异常（包括特定于数据库的方言）也被转换为相同的层次结构，这意味着你可以在一致的编程模型中对JDBC执行某些操作。 。
 
 在Spring对各种ORM框架的支持中，上述讨论对于各种模板类均适用。如果使用基于拦截器的类，则应用程序必须关心如何处理HibernateExceptions和PersistenceExceptions本身，最好分别委派给SessionFactoryUtils的convertHibernateAccessException（..）或convertJpaAccessException（）方法。这些方法将异常转换为与org.springframework.dao异常层次结构中的异常兼容的异常。由于未选中PersistenceException，因此也可能引发它们（不过，在异常方面牺牲了通用DAO抽象）。
 
@@ -37,7 +37,7 @@ public class JpaMovieFinder implements MovieFinder {
 }
 ~~~
 
-如果您使用经典的Hibernate API，则可以注入SessionFactory，如以下示例所示：
+如果你使用经典的Hibernate API，则可以注入SessionFactory，如以下示例所示：
 
 ~~~java
 @Repository
@@ -55,7 +55,7 @@ public class HibernateMovieFinder implements MovieFinder {
 }
 ~~~
 
-我们在这里展示的最后一个例子是典型的JDBC支持。 您可以将DataSource注入到初始化方法中，您可以使用此DataSource在其中创建JdbcTemplate和其他数据访问支持类（如SimpleJdbcCall等）。 以下示例自动装配DataSource：
+我们在这里展示的最后一个例子是典型的JDBC支持。 你可以将DataSource注入到初始化方法中，你可以使用此DataSource在其中创建JdbcTemplate和其他数据访问支持类（如SimpleJdbcCall等）。 以下示例自动装配DataSource：
 
 ~~~java
 @Repository
