--- a/DataAccess/3.5JDBC-Batch-Operations.md
+++ b/DataAccess/3.5JDBC-Batch-Operations.md
@@ -4,7 +4,7 @@
 
 ## 3.5.1 使用JdbcTemplate的基本批处理操作
 
-您可以通过实现特殊接口的两个方法BatchPreparedStatementSetter并将该实现作为batchUpdate方法调用中的第二个参数传入来完成JdbcTemplate批处理。 您可以使用getBatchSize方法提供当前批处理的大小。 您可以使用setValues方法设置准备好的语句的参数值。 此方法称为您在getBatchSize调用中指定的次数。 以下示例根据列表中的条目更新actor表，并将整个列表用作批处理：
+你可以通过实现特殊接口的两个方法BatchPreparedStatementSetter并将该实现作为batchUpdate方法调用中的第二个参数传入来完成JdbcTemplate批处理。 你可以使用getBatchSize方法提供当前批处理的大小。 你可以使用setValues方法设置准备好的语句的参数值。 此方法称为你在getBatchSize调用中指定的次数。 以下示例根据列表中的条目更新actor表，并将整个列表用作批处理：
 
 ~~~java
 public class JdbcActorDao implements ActorDao {
@@ -34,11 +34,11 @@ public class JdbcActorDao implements ActorDao {
 }
 ~~~
 
-如果处理更新流或从文件读取，则可能具有首选的批处理大小，但最后一批可能没有该数量的条目。在这种情况下，可以使用InterruptibleBatchPreparedStatementSetter接口，该接口可在输入源耗尽后中断批处理。 isBatchExhausted方法使您可以发出批处理结束的信号。
+如果处理更新流或从文件读取，则可能具有首选的批处理大小，但最后一批可能没有该数量的条目。在这种情况下，可以使用InterruptibleBatchPreparedStatementSetter接口，该接口可在输入源耗尽后中断批处理。 isBatchExhausted方法使你可以发出批处理结束的信号。
 
 ## 3.5.2 对象列表的批处理操作
 
-JdbcTemplate和NamedParameterJdbcTemplate都提供了另​​一种提供批处理更新的方式。无需实现特殊的批处理接口，而是将调用中的所有参数值作为列表提供。框架遍历这些值并使用内部的准备好的语句设置器。 API会有所不同，具体取决于您是否使用命名参数。对于命名参数，您提供一个SqlParameterSource数组，该批处理的每个成员都有一个条目。您可以使用SqlParameterSourceUtils.createBatch便捷方法创建此数组，传入一个bean样式的对象数组（带有与参数相对应的getter方法），字符串键的Map实例（包含对应的参数作为值），或者混合使用都。
+JdbcTemplate和NamedParameterJdbcTemplate都提供了另​​一种提供批处理更新的方式。无需实现特殊的批处理接口，而是将调用中的所有参数值作为列表提供。框架遍历这些值并使用内部的准备好的语句设置器。 API会有所不同，具体取决于你是否使用命名参数。对于命名参数，你提供一个SqlParameterSource数组，该批处理的每个成员都有一个条目。你可以使用SqlParameterSourceUtils.createBatch便捷方法创建此数组，传入一个bean样式的对象数组（带有与参数相对应的getter方法），字符串键的Map实例（包含对应的参数作为值），或者混合使用都。
 
 以下示例显示了使用命名参数的批量更新：
 
@@ -94,11 +94,11 @@ public class JdbcActorDao implements ActorDao {
 
 >在这种情况下，通过在基础PreparedStatement上自动设置值，需要从给定的Java类型派生每个值的对应JDBC类型。尽管这通常效果很好，但存在潜在的问题（例如，包含Map的空值）。在这种情况下，Spring默认情况下会调用ParameterMetaData.getParameterType，这对于JDBC驱动程序可能会很昂贵。如果遇到性能问题，应使用最新的驱动程序版本，并考虑将spring.jdbc.getParameterType.ignore属性设置为true（作为JVM系统属性或在类路径根目录中的spring.properties文件中）。 ，如Oracle 12c（SPR-16139）所述。
 
->或者，您可以考虑通过“ BatchPreparedStatementSetter”（如前所示），通过为基于“ List <Object []>”的调用提供的显式类型数组，通过在服务器上的“ registerSqlType”调用来显式指定相应的JDBC类型。自定义“ MapSqlParameterSource”实例，或者通过“ BeanPropertySqlParameterSource”实例从Java声明的属性类型中获取SQL类型，即使对于null值也是如此。
+>或者，你可以考虑通过“ BatchPreparedStatementSetter”（如前所示），通过为基于“ List <Object []>”的调用提供的显式类型数组，通过在服务器上的“ registerSqlType”调用来显式指定相应的JDBC类型。自定义“ MapSqlParameterSource”实例，或者通过“ BeanPropertySqlParameterSource”实例从Java声明的属性类型中获取SQL类型，即使对于null值也是如此。
 
 ## 3.5.3 具有多个批次的批次操作
 
-前面的批处理更新示例处理的批处理过大，您想将它们分解成几个较小的批处理。 您可以通过多次调用batchUpdate方法来使用前面提到的方法来执行此操作，但是现在有了一个更方便的方法。 除了SQL语句外，此方法还包含一个对象集合，该对象包含参数，每个批处理要进行的更新次数以及一个ParameterizedPreparedStatementSetter来设置准备好的语句的参数值。 框架遍历提供的值，并将更新调用分成指定大小的批处理。
+前面的批处理更新示例处理的批处理过大，你想将它们分解成几个较小的批处理。 你可以通过多次调用batchUpdate方法来使用前面提到的方法来执行此操作，但是现在有了一个更方便的方法。 除了SQL语句外，此方法还包含一个对象集合，该对象包含参数，每个批处理要进行的更新次数以及一个ParameterizedPreparedStatementSetter来设置准备好的语句的参数值。 框架遍历提供的值，并将更新调用分成指定大小的批处理。
 
 以下示例显示了使用100的批量大小的批量更新：
 
