--- a/Testing/3.4Annotations.md
+++ b/Testing/3.4Annotations.md
@@ -14,7 +14,7 @@
 
 ## 3.4.1 Spring测试注解
 
-Spring Framework提供了以下一组特定于Spring的注解，您可以在单元和集成测试中结合TestContext框架使用它们。 有关详细信息，请参阅相应的javadoc，包括默认属性值，属性别名和其他详细信息。
+Spring Framework提供了以下一组特定于Spring的注解，你可以在单元和集成测试中结合TestContext框架使用它们。 有关详细信息，请参阅相应的javadoc，包括默认属性值，属性别名和其他详细信息。
 
 Spring的测试注解包括以下内容：
 
@@ -50,7 +50,7 @@ Spring的测试注解包括以下内容：
 
 **@BootstrapWith**
 
-@BootstrapWith是一个类级注解，可用于配置Spring TestContext Framework的引导方式。 具体来说，您可以使用@BootstrapWith指定自定义TestContextBootstrapper。 有关更多详细信息，请参阅有关引导TestContext框架的部分。
+@BootstrapWith是一个类级注解，可用于配置Spring TestContext Framework的引导方式。 具体来说，你可以使用@BootstrapWith指定自定义TestContextBootstrapper。 有关更多详细信息，请参阅有关引导TestContext框架的部分。
 
 **@ContextConfiguration**
 
@@ -76,7 +76,7 @@ public class ConfigClassApplicationContextTests {
 }
 ~~~
 
-作为声明资源位置或带注解的类的替代或补充，您可以使用@ContextConfiguration来声明ApplicationContextInitializer类。 以下示例显示了这种情况：
+作为声明资源位置或带注解的类的替代或补充，你可以使用@ContextConfiguration来声明ApplicationContextInitializer类。 以下示例显示了这种情况：
 
 ~~~java
 @ContextConfiguration(initializers = CustomContextIntializer.class) 
@@ -85,7 +85,7 @@ public class ContextInitializerTests {
 }
 ~~~
 
-您也可以选择使用@ContextConfiguration来声明ContextLoader策略。 但请注意，您通常不需要显式配置加载程序，因为默认加载程序支持初始化程序以及资源位置或带注解的类。
+你也可以选择使用@ContextConfiguration来声明ContextLoader策略。 但请注意，你通常不需要显式配置加载程序，因为默认加载程序支持初始化程序以及资源位置或带注解的类。
 
 以下示例使用位置和加载器：
 
@@ -175,7 +175,7 @@ public class DeveloperIntegrationTests {
 }
 ~~~
 
-@ActiveProfiles默认支持继承超类声明的活动bean定义配置文件。 您还可以通过实现自定义ActiveProfilesResolver并使用@ActiveProfiles的解析程序属性对其进行注册来以编程方式解析活动Bean定义概要文件。
+@ActiveProfiles默认支持继承超类声明的活动bean定义配置文件。 你还可以通过实现自定义ActiveProfilesResolver并使用@ActiveProfiles的解析程序属性对其进行注册来以编程方式解析活动Bean定义概要文件。
 
 **@TestPropertySource**
 
@@ -207,7 +207,7 @@ public class MyIntegrationTests {
 
 @DirtiesContext指示在执行测试期间底层Spring ApplicationContext已被弄脏（即，测试以某种方式修改或损坏它 - 例如，通过更改单例bean的状态）并且应该关闭。当应用程序上下文被标记为脏时，它将从测试框架的缓存中删除并关闭。因此，对于需要具有相同配置元数据的上下文的任何后续测试，都会重建基础Spring容器。
 
-您可以将@DirtiesContext用作同一类或类层次结构中的类级别和方法级别注解。在这种情况下，ApplicationContext在任何此类带注解的方法之前或之后以及当前测试类之前或之后被标记为脏，具体取决于配置的methodMode和classMode。
+你可以将@DirtiesContext用作同一类或类层次结构中的类级别和方法级别注解。在这种情况下，ApplicationContext在任何此类带注解的方法之前或之后以及当前测试类之前或之后被标记为脏，具体取决于配置的methodMode和classMode。
 
 以下示例说明了各种配置方案的上下文何时会变脏：
 
@@ -308,7 +308,7 @@ public class CustomTestExecutionListenerTests {
 
 **@Commit**
 
-@Commit表示应在测试方法完成后提交事务测试方法的事务。 您可以使用@Commit作为@Rollback（false）的直接替换，以更明确地传达代码的意图。 类似于@Rollback，@Commit也可以声明为类级别或方法级别的注解。
+@Commit表示应在测试方法完成后提交事务测试方法的事务。 你可以使用@Commit作为@Rollback（false）的直接替换，以更明确地传达代码的意图。 类似于@Rollback，@Commit也可以声明为类级别或方法级别的注解。
 
 以下示例显示了如何使用@Commit注解：
 
@@ -389,7 +389,7 @@ public void userTest {
 
 **@SqlGroup**
 
-@SqlGroup是一个容器注解，它聚合了几个@Sql注解。 您可以原生使用@SqlGroup来声明多个嵌套的@Sql注解，或者您可以将它与Java 8对可重复注解的支持结合使用，其中@Sql可以在同一个类或方法上多次声明，隐式生成此容器注解。 以下示例显示如何声明SQL组：
+@SqlGroup是一个容器注解，它聚合了几个@Sql注解。 你可以原生使用@SqlGroup来声明多个嵌套的@Sql注解，或者你可以将它与Java 8对可重复注解的支持结合使用，其中@Sql可以在同一个类或方法上多次声明，隐式生成此容器注解。 以下示例显示如何声明SQL组：
 
 ~~~java
 @Test
@@ -429,9 +429,9 @@ public void userTest {
 
 >JSR-250生命周期注解
 
->在Spring TestContext Framework中，您可以在ApplicationContext中配置的任何应用程序组件上使用@PostConstruct和@PreDestroy以及标准语义。 但是，这些生命周期注解在实际测试类中的使用有限。
+>在Spring TestContext Framework中，你可以在ApplicationContext中配置的任何应用程序组件上使用@PostConstruct和@PreDestroy以及标准语义。 但是，这些生命周期注解在实际测试类中的使用有限。
 
->如果测试类中的方法使用@PostConstruct注解，则该方法在基础测试框架的任何before方法之前运行（例如，使用JUnit Jupiter的@BeforeEach注解的方法），并且该方法适用于测试类中的每个测试方法。 另一方面，如果测试类中的方法使用@PreDestroy注解，则该方法永远不会运行。 因此，在测试类中，我们建议您使用来自底层测试框架的测试生命周期回调，而不是@PostConstruct和@PreDestroy。
+>如果测试类中的方法使用@PostConstruct注解，则该方法在基础测试框架的任何before方法之前运行（例如，使用JUnit Jupiter的@BeforeEach注解的方法），并且该方法适用于测试类中的每个测试方法。 另一方面，如果测试类中的方法使用@PreDestroy注解，则该方法永远不会运行。 因此，在测试类中，我们建议你使用来自底层测试框架的测试生命周期回调，而不是@PostConstruct和@PreDestroy。
 
 # 3.4.3 Spring JUnit 4 测试注解
 
@@ -449,7 +449,7 @@ public void userTest {
 
 @IfProfileValue表示为特定测试环境启用了带注解的测试。如果配置的ProfileValueSource返回所提供名称的匹配值，则启用测试。否则，测试被禁用，并且有效地被忽略。
 
-您可以在类级别，方法级别或两者中应用@IfProfileValue。 @IfProfileValue的类级别使用优先于该类或其子类中的任何方法的方法级别使用。具体而言，如果在类级别和方法级别启用了测试，则启用测试。缺少@IfProfileValue意味着隐式启用了测试。这类似于JUnit 4的@Ignore注解的语义，除了@Ignore的存在总是禁用测试。
+你可以在类级别，方法级别或两者中应用@IfProfileValue。 @IfProfileValue的类级别使用优先于该类或其子类中的任何方法的方法级别使用。具体而言，如果在类级别和方法级别启用了测试，则启用测试。缺少@IfProfileValue意味着隐式启用了测试。这类似于JUnit 4的@Ignore注解的语义，除了@Ignore的存在总是禁用测试。
 
 以下示例显示了具有@IfProfileValue批注的测试：
 
@@ -461,7 +461,7 @@ public void testProcessWhichRunsOnlyOnOracleJvm() {
 }
 ~~~
 
-或者，您可以使用值列表（使用OR语义）配置@IfProfileValue，以在JUnit 4环境中为测试组实现类似TestNG的支持。 请考虑以下示例：
+或者，你可以使用值列表（使用OR语义）配置@IfProfileValue，以在JUnit 4环境中为测试组实现类似TestNG的支持。 请考虑以下示例：
 
 ~~~java
 @IfProfileValue(name="test-groups", values={"unit-tests", "integration-tests"}) 
@@ -547,7 +547,7 @@ class XmlJUnitJupiterSpringTests {
 
 **@SpringJUnitWebConfig**
 
-@SpringJUnitWebConfig是一个组合注解，它将来自JUnit Jupiter的@ExtendWith（SpringExtension.class）与来自Spring TestContext Framework的@ContextConfiguration和@WebAppConfiguration相结合。 您可以在类级别使用它作为@ContextConfiguration和@WebAppConfiguration的替代品。 关于配置选项，@ContextConfiguration和@SpringJUnitWebConfig之间的唯一区别是您可以使用@SpringJUnitWebConfig中的value属性声明带注解的类。 此外，只能使用@SpringJUnitWebConfig中的resourcePath属性覆盖@WebAppConfiguration中的value属性。
+@SpringJUnitWebConfig是一个组合注解，它将来自JUnit Jupiter的@ExtendWith（SpringExtension.class）与来自Spring TestContext Framework的@ContextConfiguration和@WebAppConfiguration相结合。 你可以在类级别使用它作为@ContextConfiguration和@WebAppConfiguration的替代品。 关于配置选项，@ContextConfiguration和@SpringJUnitWebConfig之间的唯一区别是你可以使用@SpringJUnitWebConfig中的value属性声明带注解的类。 此外，只能使用@SpringJUnitWebConfig中的resourcePath属性覆盖@WebAppConfiguration中的value属性。
 
 以下示例显示如何使用@SpringJUnitWebConfig批注指定配置类：
 
@@ -581,7 +581,7 @@ class XmlJUnitJupiterSpringWebTests {
 
 但请注意，不是属性占位符动态解析结果的文本文字的实用价值为零，因为@EnabledIf（“false”）等同于@Disabled而@EnabledIf（“true”）在逻辑上毫无意义。
 
-您可以使用@EnabledIf作为元注解来创建自定义组合注解。 例如，您可以创建自定义@EnabledOnMac注解，如下所示：
+你可以使用@EnabledIf作为元注解来创建自定义组合注解。 例如，你可以创建自定义@EnabledOnMac注解，如下所示：
 
 ~~~java
 @Target({ElementType.TYPE, ElementType.METHOD})
@@ -607,7 +607,7 @@ public @interface EnabledOnMac {}
 
 但请注意，不是属性占位符动态解析结果的文本文字实际值为零，因为@DisabledIf（“true”）等同于@Disabled，而@DisabledIf（“false”）在逻辑上没有意义。
 
-您可以使用@DisabledIf作为元注解来创建自定义组合注解。 例如，您可以创建自定义@DisabledOnMac注解，如下所示：
+你可以使用@DisabledIf作为元注解来创建自定义组合注解。 例如，你可以创建自定义@DisabledOnMac注解，如下所示：
 
 ~~~java
 @Target({ElementType.TYPE, ElementType.METHOD})
@@ -621,9 +621,9 @@ public @interface DisabledOnMac {}
 
 ## 3.4.5 测试的元注解支持
 
-您可以将大多数与测试相关的注解用作元注解，以创建自定义组合注解并减少测试套件中的配置重复。
+你可以将大多数与测试相关的注解用作元注解，以创建自定义组合注解并减少测试套件中的配置重复。
 
-您可以将以下各项作为元注解与TestContext框架结合使用。
+你可以将以下各项作为元注解与TestContext框架结合使用。
 
 * @BootstrapWith
 
@@ -750,7 +750,7 @@ class OrderRepositoryTests { }
 class UserRepositoryTests { }
 ~~~
 
-由于JUnit Jupiter支持使用@Test，@RepeatedTest，ParameterizedTest和其他作为元注解，因此您还可以在测试方法级别创建自定义组合注解。 例如，如果我们希望创建一个组合注解，它将来自JUnit Jupiter的@Test和@Tag注解与Spring中的@Transactional注解相结合，我们可以创建一个@TransactionalIntegrationTest注解，如下所示：
+由于JUnit Jupiter支持使用@Test，@RepeatedTest，ParameterizedTest和其他作为元注解，因此你还可以在测试方法级别创建自定义组合注解。 例如，如果我们希望创建一个组合注解，它将来自JUnit Jupiter的@Test和@Tag注解与Spring中的@Transactional注解相结合，我们可以创建一个@TransactionalIntegrationTest注解，如下所示：
 
 ~~~java
 @Target(ElementType.METHOD)
